@@ -24,7 +24,6 @@ import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -38,12 +37,17 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.bson.Document;
 import org.bson.conversions.Bson;
+import org.giiwa.bean.Data;
+import org.giiwa.bean.GLog;
 import org.giiwa.conf.Config;
+import org.giiwa.conf.Global;
 import org.giiwa.dao.Helper.Cursor;
 import org.giiwa.dao.Helper.V;
 import org.giiwa.dao.Helper.W;
 import org.giiwa.json.JSON;
 import org.giiwa.misc.StringFinder;
+import org.giiwa.misc.Url;
+import org.giiwa.task.SysTask;
 
 import com.mongodb.BasicDBObject;
 import com.mongodb.MongoClient;
@@ -51,6 +55,7 @@ import com.mongodb.MongoClientOptions;
 import com.mongodb.MongoClientURI;
 import com.mongodb.MongoCredential;
 import com.mongodb.ServerAddress;
+import com.mongodb.bulk.BulkWriteResult;
 import com.mongodb.client.AggregateIterable;
 import com.mongodb.client.FindIterable;
 import com.mongodb.client.ListCollectionsIterable;
@@ -58,6 +63,9 @@ import com.mongodb.client.MongoCollection;
 import com.mongodb.client.MongoCursor;
 import com.mongodb.client.MongoDatabase;
 import com.mongodb.client.MongoIterable;
+import com.mongodb.client.model.DeleteManyModel;
+import com.mongodb.client.model.IndexOptions;
+import com.mongodb.client.model.WriteModel;
 import com.mongodb.client.result.DeleteResult;
 import com.mongodb.client.result.UpdateResult;
 
@@ -67,19 +75,42 @@ import com.mongodb.client.result.UpdateResult;
  * all data access MUST be inherited from it
  * 
  */
-public class MongoHelper implements Helper.DBHelper {
+public final class MongoHelper implements Helper.DBHelper {
 
 	private static Log log = LogFactory.getLog(MongoHelper.class);
 
-	/** The mongo. */
-	private static volatile Map<String, MongoDatabase> mongo = new HashMap<String, MongoDatabase>();
-
-	public static MongoHelper inst = new MongoHelper();
+	public static MongoHelper inst = null;
 
 	public boolean isConfigured() {
 
-		getDB();
-		return mongo.size() > 0;
+		return init();
+
+	}
+
+	public boolean init() {
+
+		if (gdb != null) {
+			return true;
+		}
+
+		Configuration conf = Config.getConf();
+
+		String url = conf.getString("db.url", X.EMPTY);
+		String user = conf.getString("db.user", X.EMPTY);
+		String passwd = conf.getString("db.passwd", X.EMPTY);
+		int conns = conf.getInt("db.conns", 50);
+		int timeout = conf.getInt("db.timeout", 30000);
+
+		if (!X.isEmpty(url) && url.startsWith("mongodb://")) {
+
+			Url u = Url.create(url);
+			String dbname = u.getPath();
+
+			gdb = getDB(url, dbname, user, passwd, conns, timeout);
+
+		}
+
+		return gdb != null;
 
 	}
 
@@ -91,15 +122,20 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param db         the db
 	 * @return the long
 	 */
-	public int delete(String collection, W q, String db) {
+	public int delete(String collection, W q) {
 		int n = -1;
 		try {
-			MongoCollection<Document> db1 = getCollection(db, collection);
-			if (db != null) {
-				DeleteResult r = db1.deleteMany(q.query());
-				// db.remove(query);
-				n = (int) r.getDeletedCount();
-			}
+			MongoCollection<Document> db1 = getCollection(collection);
+
+			DeleteManyModel<Document> dmm = new DeleteManyModel<Document>(q.query());
+			List<WriteModel<Document>> req = new ArrayList<WriteModel<Document>>();
+			req.add(dmm);
+			BulkWriteResult r = db1.bulkWrite(req);
+			n = r.getDeletedCount();
+
+//			DeleteOption opt = StandardDeleteOption.OVERRIDE_READ_ONLY;
+//			DeleteResult r = db1.deleteMany(q.query(), null);
+//			n = X.toInt(r.getDeletedCount());
 
 			if (log.isDebugEnabled()) {
 				log.debug("delete, collection=" + collection + ", q=" + q + ", deleted=" + n);
@@ -112,16 +148,8 @@ public class MongoHelper implements Helper.DBHelper {
 		return n;
 	}
 
-	/**
-	 * get Mongo DB connection
-	 * 
-	 * @return DB
-	 */
-	public MongoDatabase getDB() {
-		return (MongoDatabase) getDB(Helper.DEFAULT);
-	}
-
 	private MongoDatabase gdb = null;
+	private MongoDatabase admin = null;
 
 	/**
 	 * get Mongo DB connection <br>
@@ -138,50 +166,63 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param database the name of database, if "" or null, then "default"
 	 * @return DB
 	 */
-	public MongoDatabase getDB(String database) {
+	public MongoDatabase getDB() {
 		if (gdb != null)
 			return gdb;
 
-		MongoDatabase g = null;
-		if (X.isEmpty(database)) {
-			database = Helper.DEFAULT;
-		}
-		database = database.trim();
+		Configuration conf = Config.getConf();
 
-		g = mongo.get(database);
-		if (g != null) {
-			return g;
-		}
+		String url = conf.getString("db.url", X.EMPTY);
+		String user = conf.getString("db.user", X.EMPTY);
+		String passwd = conf.getString("db.passwd", X.EMPTY);
+		int conns = conf.getInt("db.conns", 50);
+		int timeout = conf.getInt("db.timeout", 30000);
 
-		synchronized (mongo) {
-			g = mongo.get(database);
+		if (!X.isEmpty(url) && url.startsWith("mongodb://")) {
 
-			if (g == null) {
-				Configuration conf = Config.getConf();
+			Url u = Url.create(url);
+			String dbname = u.getPath();
 
-				String url = conf.getString("mongo[" + database + "].url", X.EMPTY);
-				String dbname = conf.getString("mongo[" + database + "].db", X.EMPTY);
-				String user = conf.getString("mongo[" + database + "].user", X.EMPTY);
-				String passwd = conf.getString("mongo[" + database + "].passwd", X.EMPTY);
-				int conns = conf.getInt("mongo[" + database + "].conns", 50);
-				int timeout = conf.getInt("mongo[" + database + "].timeout", 30000);
+			gdb = getDB(url, dbname, user, passwd, conns, timeout);
 
-				if (!X.isEmpty(url) && !X.isEmpty(dbname)) {
-
-					g = getDB(url, dbname, user, passwd, conns, timeout);
-
-					mongo.put(database, g);
-				}
-			}
 		}
 
-		return g;
+		return gdb;
+	}
+
+	private MongoDatabase getAdmin() {
+
+		if (admin != null)
+			return admin;
+
+		Configuration conf = Config.getConf();
+
+		String url = conf.getString("db.url", X.EMPTY);
+		String user = conf.getString("db.user", X.EMPTY);
+		String passwd = conf.getString("db.passwd", X.EMPTY);
+		int conns = conf.getInt("db.conns", 50);
+		int timeout = conf.getInt("db.timeout", 30000);
+
+		if (!X.isEmpty(url) && url.startsWith("mongodb://")) {
+
+			admin = getDB(url, "admin", user, passwd, conns, timeout);
+
+		}
+
+		return admin;
 	}
 
 	private MongoClient client = null;
 
 	@SuppressWarnings("deprecation")
 	private MongoDatabase getDB(String url, String db, String user, String passwd, int conns, int timeout) {
+
+		// old url=mongodb://server:port
+//		if (url.startsWith("mongodb://")) {
+//			url = "mongodb+srv://:@" + url.replace("mongodb://", X.EMPTY);
+//		}
+
+		// url=mongodb+srv://<username>:<password>@<cluster-address>/test?w=majority
 		url = url.trim();
 		db = db.trim();
 
@@ -189,8 +230,21 @@ public class MongoHelper implements Helper.DBHelper {
 			url = "mongodb://" + url;
 		}
 
+//		ConnectionString connString = new ConnectionString(url);
+//		MongoClientSettings settings = MongoClientSettings.builder().applyConnectionString(connString).retryWrites(true)
+//				.build();
+//
+//		client = MongoClients.create(settings);
+//		return client.getDatabase(db);
+
 		MongoClientOptions.Builder opts = new MongoClientOptions.Builder().socketTimeout(timeout)
 				.serverSelectionTimeout(timeout).maxConnectionIdleTime(10000).connectionsPerHost(conns);
+
+		if (X.isEmpty(user)) {
+			Url u = Url.create(url);
+			user = u.get("username");
+			passwd = u.get("passwd");
+		}
 
 		if (X.isEmpty(user)) {
 
@@ -221,6 +275,7 @@ public class MongoHelper implements Helper.DBHelper {
 
 			return client.getDatabase(db);
 		}
+
 	}
 
 	/**
@@ -241,8 +296,9 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param collection the collection
 	 * @return DBCollection
 	 */
-	public MongoCollection<Document> getCollection(String database, String collection) {
-		MongoDatabase g = getDB(database);
+	public MongoCollection<Document> getCollection(String collection) {
+
+		MongoDatabase g = getDB();
 
 		MongoCollection<Document> d = null;
 
@@ -252,30 +308,10 @@ public class MongoHelper implements Helper.DBHelper {
 
 		if (d == null) {
 			if (log.isErrorEnabled())
-				log.error(database + " was miss configured, please access http://[host:port]/setup to configure");
+				log.error(" was miss configured, please access http://[host:port]/setup to configure");
 		}
 
 		return d;
-	}
-
-	/**
-	 * Gets the collection using "default", if the same thread required twice, then
-	 * return same connection but reference "+1" <br>
-	 * the configuration including:
-	 * 
-	 * <pre>
-	 * mongo[default].url=
-	 * mongo[default].db=
-	 * mongo[default].conns=(50)
-	 * mongo[default].user=(null)
-	 * mongo[default].password=(null)
-	 * </pre>
-	 * 
-	 * @param name the name of the collection
-	 * @return DBCollection
-	 */
-	public MongoCollection<Document> getCollection(String name) {
-		return getCollection(Helper.DEFAULT, name);
 	}
 
 	/**
@@ -289,7 +325,7 @@ public class MongoHelper implements Helper.DBHelper {
 	 */
 	public <T extends Bean> T load(String collection, Bson query, Class<T> clazz) {
 		try {
-			return load(collection, query, clazz.newInstance());
+			return load(collection, query, clazz.getDeclaredConstructor().newInstance());
 		} catch (Exception e) {
 			log.error(e.getMessage(), e);
 
@@ -315,7 +351,7 @@ public class MongoHelper implements Helper.DBHelper {
 				if (d != null) {
 					Document d1 = d.first();
 					if (d1 != null) {
-						b.load(d1, null);
+						b.load(d1);
 						return b;
 					}
 				}
@@ -339,10 +375,11 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param db         the db
 	 * @return the Bean
 	 */
-	public <T extends Bean> T load(String collection, String[] fields, Bson query, Bson order, T b, String db) {
+	public <T extends Bean> T load(String collection, Bson query, Bson order, T b, boolean trace) {
+
 		TimeStamp t = TimeStamp.create();
 		try {
-			MongoCollection<Document> db1 = getCollection(db, collection);
+			MongoCollection<Document> db1 = getCollection(collection);
 			if (db1 != null) {
 
 				FindIterable<Document> d = db1.find(query);
@@ -354,12 +391,16 @@ public class MongoHelper implements Helper.DBHelper {
 
 					Document d1 = d.first();
 
-					if (log.isDebugEnabled())
-						log.debug("load - cost=" + t.pastms() + "ms, collection=" + collection + ", db=" + db
-								+ ", query=" + query + ", order=" + order + ", d=" + (d1 != null ? 1 : 0));
+					if (trace) {
+						log.warn("trace, load - cost=" + t.past() + ", collection=" + collection + ", query=" + query
+								+ ", order=" + order + ", d=" + (d1 != null ? 1 : 0));
+					} else if (log.isDebugEnabled()) {
+						log.debug("load - cost=" + t.past() + ", collection=" + collection + ", query=" + query
+								+ ", order=" + order + ", d=" + (d1 != null ? 1 : 0));
+					}
 
 					if (d1 != null) {
-						b.load(d1, fields);
+						b.load(d1);
 						return b;
 					}
 
@@ -369,14 +410,17 @@ public class MongoHelper implements Helper.DBHelper {
 					// return b;
 					// }
 				} else {
-					if (log.isDebugEnabled())
-						log.debug("load - cost=" + t.pastms() + "ms, collection=" + collection + ", query=" + query
+					if (trace) {
+						log.warn("trace, load - cost=" + t.past() + ", collection=" + collection + ", query=" + query
 								+ ", order=" + order + ", result=" + null);
+					} else if (log.isDebugEnabled()) {
+						log.debug("load - cost=" + t.past() + ", collection=" + collection + ", query=" + query
+								+ ", order=" + order + ", result=" + null);
+					}
 				}
 			}
 		} catch (Exception e) {
 			log.error("query=" + query + ", order=" + order, e);
-
 			// bad connection ? close the it ?
 		}
 
@@ -395,7 +439,7 @@ public class MongoHelper implements Helper.DBHelper {
 	public <T extends Bean> T load(Bson query, Bson order, T obj) {
 		String collection = getCollection(obj.getClass());
 		if (collection != null) {
-			return load(collection, null, query, order, obj, Helper.DEFAULT);
+			return load(collection, query, order, obj, false);
 		}
 		return null;
 
@@ -413,9 +457,8 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param db         the db
 	 * @return Beans
 	 */
-	@SuppressWarnings("deprecation")
-	public <T extends Bean> Beans<T> load(String collection, String[] fields, W q, int offset, int limit,
-			final Class<T> clazz, String db) throws SQLException {
+	public <T extends Bean> Beans<T> load(String collection, W q, int offset, int limit, final Class<T> clazz)
+			throws SQLException {
 
 		TimeStamp t = TimeStamp.create();
 		MongoCollection<Document> db1 = null;
@@ -425,7 +468,7 @@ public class MongoHelper implements Helper.DBHelper {
 
 		try {
 
-			db1 = getCollection(db, collection);
+			db1 = getCollection(collection);
 			if (db1 != null) {
 				cur = db1.find(query);
 
@@ -434,6 +477,8 @@ public class MongoHelper implements Helper.DBHelper {
 				}
 
 				final Beans<T> bs = new Beans<T>();
+				bs.q = q;
+				bs.table = collection;
 
 				// ignore this as big performance
 				// bs.total = (int) db.count(query);
@@ -454,8 +499,8 @@ public class MongoHelper implements Helper.DBHelper {
 					Document d = it.next();
 					// log.debug("next=" + t.past() +"ms, count=" + bs.total);
 					if (d != null) {
-						T b = clazz.newInstance();
-						b.load(d, fields);
+						T b = clazz.getDeclaredConstructor().newInstance();
+						b.load(d);
 						b._rowid = rowid++;
 						bs.add(b);
 						limit--;
@@ -463,13 +508,12 @@ public class MongoHelper implements Helper.DBHelper {
 				}
 
 				if (log.isDebugEnabled())
-					log.debug("load - cost=" + t.pastms() + "ms, collection=" + collection + ", query=" + query
-							+ ", order=" + orderBy + ", offset=" + offset + ", limit=" + limit + ", result="
-							+ bs.size());
+					log.debug("load - cost=" + t.past() + ", collection=" + collection + ", query=" + query + ", order="
+							+ orderBy + ", offset=" + offset + ", limit=" + limit + ", result=" + bs.size());
 
 				if (t.pastms() > 10000) {
-					log.warn("load - cost=" + t.pastms() + "ms, collection=" + collection + ", query=" + query
-							+ ", order=" + orderBy + ", result=" + bs.size());
+					log.warn("load - cost=" + t.past() + ", collection=" + collection + ", query=" + query + ", order="
+							+ orderBy + ", result=" + bs.size() + ", offset=" + offset);
 				}
 				bs.setCost(t.pastms());
 				return bs;
@@ -516,7 +560,7 @@ public class MongoHelper implements Helper.DBHelper {
 		String collection = getCollection(t);
 		if (collection != null) {
 			try {
-				T obj = t.newInstance();
+				T obj = t.getDeclaredConstructor().newInstance();
 				return load(query, null, obj);
 			} catch (Exception e) {
 				if (log.isErrorEnabled())
@@ -539,7 +583,7 @@ public class MongoHelper implements Helper.DBHelper {
 		String collection = getCollection(t);
 		if (collection != null) {
 			try {
-				T obj = t.newInstance();
+				T obj = t.getDeclaredConstructor().newInstance();
 				return load(query, order, obj);
 			} catch (Exception e) {
 				if (log.isErrorEnabled())
@@ -559,12 +603,18 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param db         the db
 	 * @return the t
 	 */
-	public <T extends Bean> T load(String collection, String[] fields, W q, Class<T> t, String db) {
+	@Override
+	public <T extends Bean> T load(String collection, W q, Class<T> t) {
+		return load(collection, q, t, false);
+	}
+
+	@Override
+	public <T extends Bean> T load(String collection, W q, Class<T> t, boolean trace) {
 		try {
-			T obj = t.newInstance();
-			return load(collection, fields, q.query(), q.order(), obj, db);
+			T obj = t.getDeclaredConstructor().newInstance();
+			return load(collection, q.query(), q.order(), obj, trace);
 		} catch (Exception e) {
-			log.error(e.getMessage(), e);
+			log.error(q.toString(), e);
 
 		}
 		return null;
@@ -578,12 +628,12 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param query      the query
 	 * @return the DB object
 	 */
-	public Document load(String db, String collection, Bson query) {
+	public Document load(String collection, Bson query) {
 		/**
 		 * create the sql statement
 		 */
 		try {
-			MongoCollection<Document> c = getCollection(db, collection);
+			MongoCollection<Document> c = getCollection(collection);
 			if (c != null) {
 
 				return c.find(query).first();
@@ -620,12 +670,21 @@ public class MongoHelper implements Helper.DBHelper {
 	 *
 	 * @param collection the collection name
 	 * @param v          the values
-	 * @param db         the db
 	 * @return int
 	 */
-	public int insertTable(String collection, V v, String db) {
+	public int insertTable(String collection, V v) {
 
-		MongoCollection<Document> c = getCollection(db, collection);
+		if (v == null || v.isEmpty())
+			return 0;
+
+		long t1 = Global.now();
+		v.append(X.CREATED, t1).append(X.UPDATED, t1);
+		v.append("_node", Global.id());
+
+		// TODO
+//		v.append("_node1", Local.label());
+
+		MongoCollection<Document> c = getCollection(collection);
 		if (c != null) {
 			Document d = new Document();
 
@@ -642,8 +701,9 @@ public class MongoHelper implements Helper.DBHelper {
 
 				c.insertOne(d);
 
-				if (log.isDebugEnabled())
+				if (log.isDebugEnabled()) {
 					log.debug("inserted collection=" + collection + ", d=" + d);
+				}
 				return 1;
 			} catch (Exception e) {
 				log.error(d.toString(), e);
@@ -662,7 +722,12 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param db         the db
 	 * @return int of updated
 	 */
-	final public int updateTable(String collection, W q, V v, String db) {
+	final public int updateTable(String collection, W q, V v) {
+
+		if (v == null || v.isEmpty())
+			return 0;
+
+		v.append(X.UPDATED, Global.now());
 
 		TimeStamp t = TimeStamp.create();
 		Document set = new Document();
@@ -680,7 +745,7 @@ public class MongoHelper implements Helper.DBHelper {
 
 		try {
 			// log.debug("data=" + d);
-			MongoCollection<Document> c = getCollection(db, collection);
+			MongoCollection<Document> c = getCollection(collection);
 			Document d = new Document();
 			if (!set.isEmpty()) {
 				d.append("$set", set);
@@ -688,11 +753,17 @@ public class MongoHelper implements Helper.DBHelper {
 			if (!unset.isEmpty()) {
 				d.append("$unset", unset);
 			}
-			UpdateResult r = c.updateMany(q.query(), d);
+			UpdateResult r = null;
+//			if (v.value("_id") != null) {
+//				r = c.updateMany(q.query(), d, new UpdateOptions().upsert(true));
+//			} else {
+			r = c.updateMany(q.query(), d);
+//			}
 
-			if (log.isDebugEnabled())
+			if (log.isDebugEnabled()) {
 				log.debug("updated, cost=" + t.past() + ", collection=" + collection + ", query=" + q + ", d=" + set
 						+ ", n=" + r.getModifiedCount() + ",result=" + r);
+			}
 
 			// r.getN();
 			// r.getField("nModified");
@@ -712,17 +783,20 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param db         the db
 	 * @return true: if exists, false: not exists
 	 */
-	public boolean exists(String collection, W q, String db) {
+	public boolean exists(String collection, W q) {
 		TimeStamp t1 = TimeStamp.create();
 		boolean b = false;
 		try {
-			b = load(db, collection, q.query()) != null;
+			MongoCollection<Document> c = getCollection(collection);
+			if (c != null) {
+				b = c.find(q.query()).first() != null;
+			}
 		} catch (Exception e) {
 			throw e;
 		} finally {
 			if (log.isDebugEnabled())
-				log.debug("exists cost=" + t1.pastms() + "ms,  collection=" + collection + ", query=" + q + ", result="
-						+ b);
+				log.debug(
+						"exists cost=" + t1.past() + ",  collection=" + collection + ", query=" + q + ", result=" + b);
 		}
 		return b;
 	}
@@ -746,12 +820,9 @@ public class MongoHelper implements Helper.DBHelper {
 	 * 
 	 * @return Set
 	 */
-	public static Set<String> getCollections() {
-		return getCollections(Helper.DEFAULT);
-	}
+	public Set<String> getCollections() {
 
-	public static Set<String> getCollections(String dbname) {
-		MongoDatabase d = mongo.get(dbname);
+		MongoDatabase d = getDB();
 		if (d != null) {
 
 			MongoIterable<String> it = d.listCollectionNames();
@@ -773,7 +844,7 @@ public class MongoHelper implements Helper.DBHelper {
 	@SuppressWarnings("unused")
 	public void clear(String collection) {
 		try {
-			MongoCollection<Document> c = getCollection(Helper.DEFAULT, collection);
+			MongoCollection<Document> c = getCollection(collection);
 			if (c != null) {
 				TimeStamp t = TimeStamp.create();
 				DeleteResult d = c.deleteMany(new BasicDBObject());
@@ -789,13 +860,13 @@ public class MongoHelper implements Helper.DBHelper {
 	/**
 	 * 
 	 */
-	public List<?> distinct(String collection, String key, W q, String db) {
+	public List<?> distinct(String collection, String key, W q) {
 
 		List<?> l1 = null;
 		TimeStamp t1 = TimeStamp.create();
 		try {
 
-			MongoDatabase g = getDB(db);
+			MongoDatabase g = getDB();
 			Document d = g.runCommand(
 					new BasicDBObject("distinct", collection).append("key", key).append("query", q.query()));
 			if (d.containsKey("values")) {
@@ -807,7 +878,7 @@ public class MongoHelper implements Helper.DBHelper {
 
 		} finally {
 			if (log.isDebugEnabled())
-				log.debug("distinct[" + key + "] cost=" + t1.pastms() + "ms,  collection=" + collection + ", query="
+				log.debug("distinct[" + key + "] cost=" + t1.past() + ",  collection=" + collection + ", query="
 						+ q.query() + ", n=" + (l1 == null ? "null" : l1.size()));
 		}
 		return l1;
@@ -821,8 +892,8 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param db         the db
 	 * @return long
 	 */
-	public long count(String collection, W q, String db) {
-		return count(collection, q, "*", db);
+	public long count(String collection, W q) {
+		return count(collection, q, "*");
 	}
 
 	/**
@@ -837,7 +908,7 @@ public class MongoHelper implements Helper.DBHelper {
 			zip.putNextEntry(new ZipEntry("mongo.db"));
 			PrintStream out = new PrintStream(zip);
 			if (cc == null) {
-				Set<String> ss = MongoHelper.getCollections();
+				Set<String> ss = getCollections();
 				cc = ss.toArray(new String[ss.size()]);
 			}
 			for (String table : cc) {
@@ -855,7 +926,8 @@ public class MongoHelper implements Helper.DBHelper {
 	private void _backup(PrintStream out, String tablename) {
 		if (log.isDebugEnabled())
 			log.debug("backuping " + tablename);
-		MongoCollection<Document> d1 = getCollection(Helper.DEFAULT, tablename);
+
+		MongoCollection<Document> d1 = getCollection(tablename);
 		MongoCursor<Document> c1 = d1.find().iterator();
 		int rows = 0;
 		while (c1.hasNext()) {
@@ -906,8 +978,8 @@ public class MongoHelper implements Helper.DBHelper {
 			V v = V.create().copy(jo);
 			String tablename = jo.getString("_table");
 			v.remove("_table");
-			inst.delete(tablename, W.create(X.ID, jo.get(X.ID)), Helper.DEFAULT);
-			inst.insertTable(tablename, v, Helper.DEFAULT);
+			inst.delete(tablename, W.create().and(X.ID, jo.get(X.ID)));
+			inst.insertTable(tablename, v);
 		} catch (Exception e) {
 			log.error(e.getMessage(), e);
 		}
@@ -923,12 +995,12 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param db    the db
 	 * @return the int
 	 */
-	public int inc(String table, W q, String name, int n, V v, String db) {
+	public int inc(String table, W q, String name, int n, V v) {
 		Document d = new Document();
 
 		try {
 			d.put(name, n);
-			MongoCollection<Document> c = getCollection(db, table);
+			MongoCollection<Document> c = getCollection(table);
 			Document d2 = new Document("$inc", d);
 
 			Document d1 = null;
@@ -938,7 +1010,9 @@ public class MongoHelper implements Helper.DBHelper {
 					Object v1 = v.value(s);
 					d1.append(s, v1);
 				}
-				d2.append("$set", d1);
+				if (!d1.isEmpty()) {
+					d2.append("$set", d1);
+				}
 			}
 
 			UpdateResult r = c.updateMany(q.query(), d2);
@@ -955,42 +1029,50 @@ public class MongoHelper implements Helper.DBHelper {
 		return 0;
 	}
 
-	public void createIndex(String table, LinkedHashMap<String, Integer> ss, String db) {
-		MongoCollection<Document> c = getCollection(db, table);
+	public void createIndex(String table, LinkedHashMap<String, Object> ss, boolean unique) {
+
+		MongoCollection<Document> c = getCollection(table);
 		BasicDBObject q = new BasicDBObject();
 		int n = 0;
 		for (String s : ss.keySet()) {
-			int i = ss.get(s);
-			if (i == 2) {
+			Object i = ss.get(s);
+			if (X.isSame(i, 2)) {
 				q.append(s, "2d");
 			} else {
-				q.append(s, ss.get(s));
+				q.append(s, i);
 			}
 			n++;
-			if (n > 4) {
+			if (n > 5) {
 				break;
 			}
 		}
-		try {
-			c.createIndex(q);
-		} catch (Exception e) {
-			log.error(q, e);
 
+		IndexOptions opt = new IndexOptions();
+		opt.background(true);
+		opt.unique(unique);
+
+		try {
+			c.createIndex(q, opt);
+		} catch (Exception e) {
+			if (!X.isCauseBy(e, ".*already exists.*")) {
+				log.error(q, e);
+			}
+			GLog.applog.error("db", "optimaize", "table=" + table + ", key=" + ss, e);
 		}
 	}
 
 	@Override
-	public void dropIndex(String table, String name, String db) {
-		MongoCollection<Document> c = getCollection(db, table);
+	public void dropIndex(String table, String name) {
+		MongoCollection<Document> c = getCollection(table);
 		c.dropIndex(name);
 	}
 
 	@Override
-	public List<Map<String, Object>> getIndexes(String table, String db) {
+	public List<Map<String, Object>> getIndexes(String table) {
 
 		List<Map<String, Object>> l1 = new ArrayList<Map<String, Object>>();
 
-		MongoCollection<Document> c = getCollection(db, table);
+		MongoCollection<Document> c = getCollection(table);
 		MongoCursor<Document> i1 = c.listIndexes().iterator();
 		while (i1.hasNext()) {
 			Document d1 = i1.next();
@@ -1001,18 +1083,26 @@ public class MongoHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public int insertTable(String collection, List<V> values, String db) {
+	public int insertTable(String collection, List<V> values) {
 
 		if (X.isEmpty(values))
 			return 0;
 
-		MongoCollection<Document> c = getCollection(db, collection);
+		MongoCollection<Document> c = getCollection(collection);
 		if (c != null) {
 
 			TimeStamp t = TimeStamp.create();
 			List<Document> l1 = new ArrayList<Document>();
 
 			for (V v : values) {
+
+				if (v == null || v.isEmpty())
+					continue;
+
+				long t1 = Global.now();
+				v.append(X.CREATED, t1).append(X.UPDATED, t1);
+				v.append("_node", Global.id());
+
 				Document d = new Document();
 
 				Object id = v.value(X.ID);
@@ -1023,6 +1113,7 @@ public class MongoHelper implements Helper.DBHelper {
 					Object v1 = v.value(name);
 					d.append(name, v1);
 				}
+
 				l1.add(d);
 			}
 
@@ -1031,10 +1122,11 @@ public class MongoHelper implements Helper.DBHelper {
 				c.insertMany(l1);
 
 				if (log.isDebugEnabled())
-					log.debug("inserted collection=" + collection + ", cost=" + t.pastms() + ", size=" + l1.size());
+					log.debug("inserted collection=" + collection + ", cost=" + t.past() + ", size=" + l1.size());
+
 				return l1.size();
 			} catch (Exception e) {
-				log.error("cost=" + t.pastms() + "ms", e);
+				log.error("cost=" + t.past(), e);
 
 			}
 		}
@@ -1042,9 +1134,9 @@ public class MongoHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public List<JSON> listTables(String db) {
+	public List<JSON> listTables() {
 
-		MongoDatabase g = getDB(db);
+		MongoDatabase g = getDB();
 
 		List<JSON> list = new ArrayList<JSON>();
 		if (g != null) {
@@ -1081,42 +1173,41 @@ public class MongoHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public <T extends Bean> Cursor<T> query(String table, W q, int s, int n, Class<T> t, String db) {
+	public <T extends Bean> Cursor<T> cursor(String table, W q, long offset, Class<T> t) {
 
 		MongoCollection<Document> db1 = null;
 		FindIterable<Document> cur = null;
 		Bson query = q.query();
 		Bson orderBy = q.order();
 
-		try {
+//		try {
 
-			db1 = getCollection(db, table);
-			if (db1 != null) {
-				cur = db1.find(query);
+		db1 = getCollection(table);
+		if (db1 != null) {
+			cur = db1.find(query);
+			cur.noCursorTimeout(true);
 
-				if (orderBy != null) {
-					cur.sort(orderBy);
-				}
-				if (s > 0) {
-					cur.skip(s);
-				}
-				if (n > 0) {
-					cur.limit(n);
-				}
-
-				MongoCursor<Document> it = cur.iterator();
-				return _cursor(t, it);
-
+			if (orderBy != null) {
+				cur.sort(orderBy);
 			}
-		} catch (Exception e) {
-			log.error("query=" + query + ", order=" + orderBy, e);
+			if (offset > 0) {
+				cur.skip((int) offset);
+			}
+
+			MongoCursor<Document> it = cur.iterator();
+			return _cursor(t, it);
 
 		}
+//		} catch (Exception e) {
+//			log.error("query=" + query + ", order=" + orderBy, e);
+//
+//		}
 
 		return null;
 	}
 
 	private <T extends Bean> Cursor<T> _cursor(final Class<T> t, final MongoCursor<Document> cur) {
+
 		return new Cursor<T>() {
 
 			@Override
@@ -1128,8 +1219,8 @@ public class MongoHelper implements Helper.DBHelper {
 			public T next() {
 
 				try {
-					T b = t.newInstance();
-					b.load(cur.next(), null);
+					T b = t.getDeclaredConstructor().newInstance();
+					b.load(cur.next());
 					return b;
 				} catch (Exception e) {
 					log.error(e.getMessage(), e);
@@ -1145,43 +1236,49 @@ public class MongoHelper implements Helper.DBHelper {
 		};
 	}
 
+	public static MongoHelper create(String url, String user, String passwd) throws SQLException {
+		return create(url, user, passwd, 10, 30000);
+	}
+
 	/**
 	 * 
 	 * @param url, "mongodb://host:port/dbname"
 	 * @return the MongoHelper
+	 * @throws SQLException
 	 */
-	public static MongoHelper create(String url, String user, String passwd) {
+	public static MongoHelper create(String url, String user, String passwd, int conns, int timeout)
+			throws SQLException {
 		//
 		int i = url.lastIndexOf("/");
-		if (i < 0)
-			return null;
+		if (i < 0) {
+			throw new SQLException("dbname missed, mongdb://[ip]:[port],[ip2]:[port]/dbname");
+		}
 
 		String dbname = url.substring(i + 1);
 		url = url.substring(0, i);
 		MongoHelper h = new MongoHelper();
-		MongoDatabase g = h.getDB(url, dbname, user, passwd, 10, 30000);
+		MongoDatabase g = h.getDB(url, dbname, user, passwd, conns, timeout);
 		h.gdb = g;
 		return h;
 	}
 
-	@SuppressWarnings("deprecation")
 	@Override
 	public List<JSON> getMetaData(String tablename) {
 		MongoCollection<Document> c = getCollection(tablename);
 		List<JSON> list = new ArrayList<JSON>();
-		list.add(JSON.create().append("name", tablename).append("size", c.count()));
+		list.add(JSON.create().append("name", tablename).append("size", c.estimatedDocumentCount()));
 		return list;
 	}
 
 	@SuppressWarnings("unchecked")
 	@Override
-	public <T> T sum(String collection, W q, String name, String db) {
+	public <T> T sum(String collection, W q, String name) {
 
 		TimeStamp t1 = TimeStamp.create();
 		Object n = 0;
 		try {
 
-			MongoCollection<Document> c = getCollection(db, collection);
+			MongoCollection<Document> c = getCollection(collection);
 			if (c != null) {
 				BasicDBObject match = new BasicDBObject("$match", q == null ? new BasicDBObject() : q.query());
 				BasicDBObject group = new BasicDBObject();
@@ -1205,88 +1302,18 @@ public class MongoHelper implements Helper.DBHelper {
 			throw e;
 		} finally {
 			if (log.isDebugEnabled())
-				log.debug("sum, cost=" + t1.pastms() + "ms,  collection=" + collection + ", query=" + q + ", n=" + n);
+				log.debug("sum, cost=" + t1.past() + ",  collection=" + collection + ", query=" + q + ", n=" + n);
 		}
 		return (T) n;
 	}
 
 	@SuppressWarnings("unchecked")
-	@Override
-	public <T> T max(String collection, W q, String name, String db) {
+	public <T> T avg(String collection, W q, String name) {
 		TimeStamp t1 = TimeStamp.create();
 		Object n = 0;
 		try {
 
-			MongoCollection<Document> c = getCollection(db, collection);
-			if (c != null) {
-				BasicDBObject match = new BasicDBObject("$match", q == null ? new BasicDBObject() : q.query());
-				BasicDBObject group = new BasicDBObject();
-				group.append("$group", new BasicDBObject().append("_id", name).append(name,
-						new BasicDBObject().append("$max", "$" + name)));
-
-				List<BasicDBObject> l1 = Arrays.asList(match, group);
-
-				// System.out.println(l1);
-
-				MongoCursor<Document> it = c.aggregate(l1).iterator();
-				if (it != null && it.hasNext()) {
-					Document d = it.next();
-					if (d != null) {
-						n = d.get(name);
-					}
-				}
-			}
-		} catch (Exception e) {
-			throw e;
-		} finally {
-			if (log.isDebugEnabled())
-				log.debug("max, cost=" + t1.pastms() + "ms,  collection=" + collection + ", query=" + q + ", n=" + n);
-		}
-		return (T) n;
-	}
-
-	@SuppressWarnings("unchecked")
-	@Override
-	public <T> T min(String collection, W q, String name, String db) {
-		TimeStamp t1 = TimeStamp.create();
-		Object n = 0;
-		try {
-
-			MongoCollection<Document> c = getCollection(db, collection);
-			if (c != null) {
-				BasicDBObject match = new BasicDBObject("$match", q == null ? new BasicDBObject() : q.query());
-				BasicDBObject group = new BasicDBObject();
-				group.append("$group", new BasicDBObject().append("_id", name).append(name,
-						new BasicDBObject().append("$min", "$" + name)));
-
-				List<BasicDBObject> l1 = Arrays.asList(match, group);
-
-				// System.out.println(l1);
-
-				MongoCursor<Document> it = c.aggregate(l1).iterator();
-				if (it != null && it.hasNext()) {
-					Document d = it.next();
-					if (d != null) {
-						n = d.get(name);
-					}
-				}
-			}
-		} catch (Exception e) {
-			throw e;
-		} finally {
-			if (log.isDebugEnabled())
-				log.debug("min, cost=" + t1.pastms() + "ms,  collection=" + collection + ", query=" + q + ", n=" + n);
-		}
-		return (T) n;
-	}
-
-	@SuppressWarnings("unchecked")
-	public <T> T avg(String collection, W q, String name, String db) {
-		TimeStamp t1 = TimeStamp.create();
-		Object n = 0;
-		try {
-
-			MongoCollection<Document> c = getCollection(db, collection);
+			MongoCollection<Document> c = getCollection(collection);
 			if (c != null) {
 				BasicDBObject match = new BasicDBObject("$match", q == null ? new BasicDBObject() : q.query());
 				BasicDBObject group = new BasicDBObject();
@@ -1295,8 +1322,6 @@ public class MongoHelper implements Helper.DBHelper {
 
 				List<BasicDBObject> l1 = Arrays.asList(match, group);
 
-				// System.out.println(l1);
-
 				MongoCursor<Document> it = c.aggregate(l1).iterator();
 				if (it != null && it.hasNext()) {
 					Document d = it.next();
@@ -1310,7 +1335,7 @@ public class MongoHelper implements Helper.DBHelper {
 			throw e;
 		} finally {
 			if (log.isDebugEnabled())
-				log.debug("avg, cost=" + t1.pastms() + "ms,  collection=" + collection + ", query=" + q + ", n=" + n);
+				log.debug("avg, cost=" + t1.past() + ",  collection=" + collection + ", query=" + q + ", n=" + n);
 		}
 		return (T) n;
 	}
@@ -1324,8 +1349,8 @@ public class MongoHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public void drop(String table, String db) {
-		MongoCollection<Document> c = getCollection(db, table);
+	public void drop(String table) {
+		MongoCollection<Document> c = getCollection(table);
 		c.drop();
 	}
 
@@ -1339,8 +1364,8 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @return
 	 */
 	@Override
-	public List<JSON> count(String collection, W q, String[] name, String db, int n) {
-		return count(collection, q, "*", name, db, n);
+	public List<JSON> count(String collection, W q, String[] name, int n) {
+		return count(collection, q, "*", name, n);
 	}
 
 	@SuppressWarnings({ "unchecked", "rawtypes" })
@@ -1353,7 +1378,7 @@ public class MongoHelper implements Helper.DBHelper {
 	 * @param db    the db name
 	 * @return
 	 */
-	public List<JSON> aggregate(String table, String[] func, W q, String[] group, String db) {
+	public List<JSON> aggregate(String table, String[] func, W q, String[] group) {
 
 		TimeStamp t = TimeStamp.create();
 		MongoCollection<Document> db1 = null;
@@ -1374,7 +1399,7 @@ public class MongoHelper implements Helper.DBHelper {
 				return null;
 			}
 
-			db1 = getCollection(db, table);
+			db1 = getCollection(table);
 			if (db1 != null) {
 
 				if (!query.isEmpty()) {
@@ -1434,7 +1459,7 @@ public class MongoHelper implements Helper.DBHelper {
 
 	@SuppressWarnings({ "unchecked", "rawtypes" })
 	@Override
-	public List<JSON> sum(String table, W q, String name, String[] group, String db) {
+	public List<JSON> sum(String table, W q, String name, String[] group) {
 
 		TimeStamp t = TimeStamp.create();
 		MongoCollection<Document> db1 = null;
@@ -1453,7 +1478,7 @@ public class MongoHelper implements Helper.DBHelper {
 				return null;
 			}
 
-			db1 = getCollection(db, table);
+			db1 = getCollection(table);
 			if (db1 != null) {
 
 				List<Bson> l1 = new ArrayList<Bson>();
@@ -1500,7 +1525,7 @@ public class MongoHelper implements Helper.DBHelper {
 
 	@SuppressWarnings({ "unchecked", "rawtypes" })
 	@Override
-	public List<JSON> max(String table, W q, String name, String[] group, String db) {
+	public List<JSON> avg(String table, W q, String name, String[] group) {
 		TimeStamp t = TimeStamp.create();
 		MongoCollection<Document> db1 = null;
 
@@ -1518,138 +1543,7 @@ public class MongoHelper implements Helper.DBHelper {
 				return null;
 			}
 
-			db1 = getCollection(db, table);
-			if (db1 != null) {
-
-				List<Bson> l1 = new ArrayList<Bson>();
-
-				if (!query.isEmpty()) {
-					l1.add(new BasicDBObject().append("$match", query));
-				}
-
-				BasicDBObject g1 = new BasicDBObject();
-				for (String s : group) {
-					g1.append(s, "$" + s);
-				}
-				l1.add(new BasicDBObject().append("$group", new BasicDBObject().append("_id", g1).append("max",
-						new BasicDBObject().append("$max", "$" + name))));
-
-				if (!order.isEmpty()) {
-					l1.add(new BasicDBObject().append("$sort", order));
-				}
-
-				AggregateIterable<Document> a1 = db1.aggregate(l1);
-
-				List<JSON> l2 = JSON.createList();
-				for (Document d : a1) {
-					JSON j1 = JSON.fromObject(d);
-					Object o = j1.remove("_id");
-					if (o instanceof Map) {
-						j1.putAll((Map) o);
-						l2.add(j1);
-					}
-				}
-
-				if (log.isDebugEnabled())
-					log.debug("max, cost=" + t.past() + ", query=" + l1 + ", result=" + l2);
-//				System.out.println("max, cost=" + t.past() + ", query=" + l1 + ", result=" + l2);
-
-				return l2;
-			}
-		} catch (Exception e) {
-			log.error("query=" + query + ", order=" + order, e);
-
-		}
-
-		return null;
-	}
-
-	@SuppressWarnings({ "unchecked", "rawtypes" })
-	@Override
-	public List<JSON> min(String table, W q, String name, String[] group, String db) {
-		TimeStamp t = TimeStamp.create();
-		MongoCollection<Document> db1 = null;
-
-		BasicDBObject query = q.query();
-		BasicDBObject order = q.order();
-
-		try {
-			if (X.isEmpty(table)) {
-				log.error("bad table=" + table, new Exception("bad table=" + table));
-				return null;
-			}
-
-			if (group == null || group.length == 0) {
-				log.error("bad group", new Exception("bad group"));
-				return null;
-			}
-
-			db1 = getCollection(db, table);
-			if (db1 != null) {
-
-				List<Bson> l1 = new ArrayList<Bson>();
-
-				if (!query.isEmpty()) {
-					l1.add(new BasicDBObject().append("$match", query));
-				}
-
-				BasicDBObject g1 = new BasicDBObject();
-				for (String s : group) {
-					g1.append(s, "$" + s);
-				}
-				l1.add(new BasicDBObject().append("$group", new BasicDBObject().append("_id", g1).append("min",
-						new BasicDBObject().append("$min", "$" + name))));
-
-				if (!order.isEmpty()) {
-					l1.add(new BasicDBObject().append("$sort", order));
-				}
-
-				AggregateIterable<Document> a1 = db1.aggregate(l1);
-
-				List<JSON> l2 = JSON.createList();
-				for (Document d : a1) {
-					JSON j1 = JSON.fromObject(d);
-					Object o = j1.remove("_id");
-					if (o instanceof Map) {
-						j1.putAll((Map) o);
-						l2.add(j1);
-					}
-				}
-
-				if (log.isDebugEnabled())
-					log.debug("min, cost=" + t.past() + ", query=" + l1 + ", result=" + l2);
-
-				return l2;
-			}
-		} catch (Exception e) {
-			log.error("query=" + query + ", order=" + order, e);
-
-		}
-
-		return null;
-	}
-
-	@SuppressWarnings({ "unchecked", "rawtypes" })
-	@Override
-	public List<JSON> avg(String table, W q, String name, String[] group, String db) {
-		TimeStamp t = TimeStamp.create();
-		MongoCollection<Document> db1 = null;
-
-		BasicDBObject query = q.query();
-		BasicDBObject order = q.order();
-
-		try {
-			if (X.isEmpty(table)) {
-				log.error("bad table=" + table, new Exception("bad table=" + table));
-				return null;
-			}
-
-			if (group == null || group.length == 0) {
-				log.error("bad group", new Exception("bad group"));
-				return null;
-			}
-
-			db1 = getCollection(db, table);
+			db1 = getCollection(table);
 			if (db1 != null) {
 
 				List<Bson> l1 = new ArrayList<Bson>();
@@ -1696,7 +1590,7 @@ public class MongoHelper implements Helper.DBHelper {
 
 	@SuppressWarnings("unchecked")
 	@Override
-	public <T> T std_deviation(String collection, W q, String name, String db) {
+	public <T> T std_deviation(String collection, W q, String name) {
 
 		TimeStamp t = TimeStamp.create();
 		MongoCollection<Document> db1 = null;
@@ -1709,7 +1603,7 @@ public class MongoHelper implements Helper.DBHelper {
 				return null;
 			}
 
-			db1 = getCollection(db, collection);
+			db1 = getCollection(collection);
 			if (db1 != null) {
 
 				List<Bson> l1 = new ArrayList<Bson>();
@@ -1729,7 +1623,10 @@ public class MongoHelper implements Helper.DBHelper {
 					log.debug("std_deviation, cost=" + t.past() + ", query=" + l1 + ", result=" + a1);
 
 				if (a1 != null) {
-					return (T) a1.first().get("e");
+					Document doc = a1.first();
+					if (doc != null) {
+						return (T) doc.get("e");
+					}
 				}
 
 			}
@@ -1744,19 +1641,22 @@ public class MongoHelper implements Helper.DBHelper {
 
 	@SuppressWarnings("unchecked")
 	@Override
-	public <T> T median(String table, W q, String name, String db) {
+	public <T> T median(String table, W q, String name) {
 		try {
-			long n = this.count(table, q, db);
+			long n = this.count(table, q);
 			if (n % 2 == 1) {
 				q.sort(name, 1);
-				Beans<Bean> b = this.load(table, new String[] { name }, q, (int) (n / 2), 1, Bean.class, db);
+				Beans<Bean> b = this.load(table, q, (int) (n / 2), 1, Bean.class);
 				if (b != null && !b.isEmpty()) {
 					return (T) b.get(0).get(name);
 				}
 			} else if (n > 0) {
 				q.sort(name, 1);
-				Beans<Bean> b = this.load(table, new String[] { name }, q, (int) (n / 2), 2, Bean.class, db);
+				Beans<Bean> b = this.load(table, q, (int) (n / 2), 2, Bean.class);
 				if (b != null && !b.isEmpty()) {
+					if (b.size() == 1) {
+						return (T) b.get(0).get(name);
+					}
 					Object o1 = b.get(0).get(name);
 					Object o2 = b.get(1).get(name);
 
@@ -1781,70 +1681,138 @@ public class MongoHelper implements Helper.DBHelper {
 
 	@Override
 	public List<JSON> listOp() {
-		return null;
+
+		try {
+			MongoDatabase g = getAdmin();
+			if (g != null) {
+				Document d1 = g.runCommand(new BasicDBObject("currentOp", true).append("$all", true));
+
+				JSON j1 = JSON.fromObject(d1);
+				List<JSON> l1 = j1.getList("inprog");
+
+				List<JSON> l2 = X.asList(l1, e1 -> {
+					JSON e = (JSON) e1;
+					JSON d = JSON.create();
+
+					if (e.containsKey("command") && !X.isIn(e.get("op"), "none")) {
+						d.put("client", e.get("client"));
+						d.put("opid", e.get("opid"));
+						d.put("cost", e.get("secs_running"));
+						d.put("op", e.get("op"));
+						d.put("command", e.get("command").toString());
+						d.put("plan", e.get("planSummary"));
+						d.put("locks", e.get("locks").toString());
+						d.put("table", e.get("ns"));
+						d.put("waitingForLock", e.get("waitingForLock"));
+
+						return d;
+					}
+					return null;
+				});
+
+				Collections.sort(l2, new Comparator<JSON>() {
+
+					@Override
+					public int compare(JSON o1, JSON o2) {
+						long c1 = o1.getLong("cost");
+						long c2 = o2.getLong("cost");
+
+						if (c1 > c2) {
+							return -1;
+						} else if (c1 < c2) {
+							return 1;
+						}
+						return 0;
+					}
+
+				});
+				return l2;
+			}
+			return null;
+		} catch (Exception e) {
+			throw e;
+		}
 	}
 
 	@Override
-	public long size(String table, String db) {
-		TimeStamp t1 = TimeStamp.create();
-		long n = 0;
-		try {
+	public void killOp(Object id) {
 
-			MongoCollection<Document> c = getCollection(db, table);
-			if (c != null) {
-				n = c.estimatedDocumentCount();
-//				count(q.query());
+		try {
+			MongoDatabase g = getAdmin();
+			if (g != null) {
+				g.runCommand(new BasicDBObject("killOp", 1).append("op", X.toLong(id)));
 			}
 		} catch (Exception e) {
 			throw e;
-		} finally {
-			if (log.isDebugEnabled())
-				log.debug("size, cost=" + t1.pastms() + "ms,  collection=" + table + ", n=" + n);
 		}
-		return n;
 	}
 
-	@SuppressWarnings("deprecation")
+	public JSON stats(String table) {
+
+		try {
+			MongoDatabase g = getDB();
+			if (X.isEmpty(table)) {
+				Document d1 = g.runCommand(new BasicDBObject("dbStats", 1).append("scale", 1024 * 1024 * 1024));
+
+//				float M = (1024 * 1024 * 1024);
+				JSON j1 = JSON.fromObject(d1);
+//				j1.put("storageSize", j1.getLong("storageSize") / M);
+//				j1.put("indexSize", j1.getLong("indexSize") / M);
+//				j1.put("totalSize", j1.getLong("totalSize") / M);
+//				j1.put("fsTotalSize", j1.getLong("fsTotalSize") / M);
+				return j1;
+			} else {
+				Document d1 = g.runCommand(new BasicDBObject("collStats", table));
+				JSON j1 = JSON.fromObject(d1);
+				return j1;
+			}
+		} catch (Exception e) {
+			throw e;
+		}
+
+	}
+
 	@Override
-	public long count(String table, W q, String name, String db) {
+	public long size(String table) {
+
+		JSON j1 = stats(table);
+		return j1.getLong("totalSize");
+
+	}
+
+	@Override
+	public long count(String table, W q, String name) {
 
 		TimeStamp t1 = TimeStamp.create();
 		long n = 0;
+		BasicDBObject q1 = q.query();
+
 		try {
 
-			MongoCollection<Document> c = getCollection(db, table);
+			MongoCollection<Document> c = getCollection(table);
 			if (c != null) {
-				if (X.isSame(name, "*")) {
-					n = c.count(q.query());
+				if (q1.isEmpty()) {
+					n = c.estimatedDocumentCount();
 				} else {
-
-					// aggregate({$group:{_id:'$album'}},{$group:{_id:1, count:{$sum:1}}})
-					List<BasicDBObject> l1 = new ArrayList<BasicDBObject>();
-					l1.add(new BasicDBObject().append("$match", q.query()));
-					l1.add(new BasicDBObject().append("$group", new BasicDBObject().append("_id", "$" + name)));
-					l1.add(new BasicDBObject().append("$group",
-							new BasicDBObject().append("_id", 1).append("count", new BasicDBObject("$sum", 1))));
-
-					log.debug("count, l1=" + l1);
-
-					Document a = c.aggregate(l1).first();
-					if (a != null) {
-						return X.toLong(a.get("count"));
-					}
+					n = c.countDocuments(q1);// count(q1);
+//					FindIterable<Document> fi = c.find(q1);
+//					fi.skip(Integer.MAX_VALUE);
+//					n = c.countDocuments(q1);
 				}
 			}
 		} catch (Exception e) {
+			log.error("q=" + q, e);
 			throw e;
 		} finally {
 			if (log.isDebugEnabled())
-				log.debug("count, cost=" + t1.pastms() + "ms,  table=" + table + ", query=" + q.query() + ", n=" + n);
+				log.debug("count, cost=" + t1.past() + ",  collection=" + table + ", query=" + q1 + ", n=" + n);
 		}
 		return n;
 	}
 
 	@SuppressWarnings({ "unchecked", "rawtypes" })
 	@Override
-	public List<JSON> count(String table, W q, String name, String[] group, String db, int n) {
+	public List<JSON> count(String table, W q, String name, String[] group, int n) {
 
 		TimeStamp t = TimeStamp.create();
 		MongoCollection<Document> db1 = null;
@@ -1863,7 +1831,7 @@ public class MongoHelper implements Helper.DBHelper {
 				return null;
 			}
 
-			db1 = getCollection(db, table);
+			db1 = getCollection(table);
 			if (db1 != null) {
 
 				List<Bson> l1 = new ArrayList<Bson>();
@@ -1907,7 +1875,6 @@ public class MongoHelper implements Helper.DBHelper {
 
 				if (log.isDebugEnabled())
 					log.debug("count " + table + ", cost=" + t.past() + ", query=" + l1 + ", result=" + l2);
-//				System.out.println("count, cost=" + t.past() + ", query=" + l1 + ", result=" + l2);
 
 				return l2;
 			}
@@ -1923,9 +1890,114 @@ public class MongoHelper implements Helper.DBHelper {
 	@Override
 	public void repair(String table) {
 
-		MongoDatabase g = getDB(Helper.DEFAULT);
+		MongoDatabase g = getDB();
 		g.runCommand(new BasicDBObject().append("validate", table));
 
+	}
+
+	class OpChecker extends SysTask {
+
+		/**
+		 * 
+		 */
+		private static final long serialVersionUID = 1L;
+
+		@Override
+		public String getName() {
+			return "gi.db.checker";
+		}
+
+		@Override
+		public void onExecute() {
+
+			MongoDatabase db = getDB();
+			BasicDBObject cmd = new BasicDBObject();
+			db.runCommand(cmd);
+
+			// update, query, insert, command,
+		}
+
+	}
+
+	@Override
+	public JSON status() {
+		MongoDatabase g = getDB();
+		Document d1 = g.runCommand(new BasicDBObject("serverStatus", 1));
+
+		JSON j2 = JSON.fromObject(d1);
+
+		JSON j1 = JSON.create();
+		if (j2 != null) {
+
+//			j1.append("pid", j2.getString("pid"));
+			j1.append("conns", j2.getLong("connections.current"));
+			j1.append("reads", j2.getLong("opcounters.query") + j2.getLong("opcounters.getmore"));
+			j1.append("writes", j2.getLong("opcounters.insert") + j2.getLong("opcounters.update")
+					+ j2.getLong("opcounters.delete"));
+			j1.append("cursor", j2.getLong("cursor.open cursor count"));
+			j1.append("netin", j2.getLong("network.bytesIn"));
+			j1.append("netout", j2.getLong("network.bytesOut"));
+
+//			j1.append("insert", j2.getLong("opcounters.insert"));
+//			j1.append("query", j2.getLong("opcounters.query"));
+//			j1.append("update", j2.getLong("opcounters.update"));
+//			j1.append("delete", j2.getLong("opcounters.delete"));
+//			j1.append("getmore", j2.getLong("opcounters.getmore"));
+//			j1.append("command", j2.getLong("opcounters.command"));
+
+		}
+		return j1;
+	}
+
+	@SuppressWarnings("unchecked")
+	@Override
+	public <T> T max(String collection, W q, String name) {
+		Data e = this.load(collection, q.sort(name, -1), Data.class, false);
+		if (e != null) {
+			return (T) e.get(name);
+		}
+		return null;
+	}
+
+	@SuppressWarnings("unchecked")
+	@Override
+	public <T> T min(String collection, W q, String name) {
+
+		Data e = this.load(collection, q.sort(name), Data.class, false);
+		if (e != null) {
+			return (T) e.get(name);
+		}
+		return null;
+
+	}
+
+	private transient Optimizer _optimizer;
+
+	@Override
+	public Optimizer getOptimizer() {
+		if (_optimizer == null) {
+			_optimizer = new Optimizer(this);
+		}
+		return _optimizer;
+	}
+
+	@Override
+	public boolean distributed(String table, String key) {
+		// TODO Auto-generated method stub
+		return false;
+	}
+
+	@Override
+	public boolean createTable(String table, JSON cols) {
+		// TODO Auto-generated method stub
+		return false;
+	}
+
+	@Override
+	public long getTime() {
+		MongoDatabase g = getDB();
+		g.runCommand(null);
+		return 0;
 	}
 
 }
