@@ -20,6 +20,7 @@ import java.io.InputStreamReader;
 import java.io.PrintStream;
 import java.sql.Connection;
 import java.sql.DatabaseMetaData;
+import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
@@ -35,19 +36,26 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.TreeMap;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
+import org.apache.commons.configuration2.Configuration;
 import org.apache.commons.dbcp2.BasicDataSource;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.giiwa.bean.Data;
+import org.giiwa.conf.Config;
+import org.giiwa.conf.Global;
 import org.giiwa.dao.Helper.Cursor;
 import org.giiwa.dao.Helper.DBHelper;
 import org.giiwa.dao.Helper.V;
 import org.giiwa.dao.Helper.W;
 import org.giiwa.json.JSON;
+import org.giiwa.pool.Pool;
+import org.giiwa.pool.Pool.IPoolFactory;
 
 import com.mongodb.BasicDBObject;
 
@@ -57,7 +65,7 @@ import com.mongodb.BasicDBObject;
  * all data access MUST be inherited from it
  * 
  */
-public class RDSHelper implements Helper.DBHelper {
+public final class RDSHelper implements Helper.DBHelper {
 
 	private static Log log = LogFactory.getLog(RDSHelper.class);
 
@@ -76,14 +84,9 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	public void close() {
-		if (conn != null && this != Helper.primary) {
-			try {
-				conn.close();
-				conn = null;
-			} catch (SQLException e) {
-				log.error(e.getMessage(), e);
-			}
-
+		if (_conn != null && this != Helper.primary) {
+			_conn.destroy();
+			_conn = null;
 		}
 	}
 
@@ -119,7 +122,7 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param o the o
 	 * @throws SQLException the SQL exception
 	 */
-	private static void setParameter(PreparedStatement p, int i, Object o, boolean isoracle) throws SQLException {
+	private static void setParameter(PreparedStatement p, int i, Object o) throws SQLException {
 		if (o == null) {
 			p.setObject(i, null);
 		} else if (o instanceof Integer) {
@@ -151,7 +154,7 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param db    the db
 	 * @return int
 	 */
-	public int delete(String table, W q, String db) {
+	public int delete(String table, W q) {
 
 		/**
 		 * update it in database
@@ -160,17 +163,23 @@ public class RDSHelper implements Helper.DBHelper {
 		PreparedStatement p = null;
 		int n = -1;
 
+		StringBuilder sql = new StringBuilder();
+
 		try {
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null)
-				return -1;
+				throw new SQLException("get connection failed!");
 
 			/**
 			 * create the sql statement
 			 */
-			StringBuilder sql = new StringBuilder();
-			sql.append("delete from ").append(table);
+			if (this.isClickhouse(c)) {
+				sql.append("alter table " + table + " delete ");
+			} else {
+				sql.append("delete from ").append(table);
+			}
+
 			String where = _where(q, c);
 			Object[] args = q.args();
 
@@ -178,6 +187,7 @@ public class RDSHelper implements Helper.DBHelper {
 				sql.append(" where ").append(where);
 			}
 
+//			sql.append(";commit;");
 			p = c.prepareStatement(sql.toString());
 
 			if (args != null) {
@@ -186,7 +196,7 @@ public class RDSHelper implements Helper.DBHelper {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 
 				}
 			}
@@ -198,7 +208,11 @@ public class RDSHelper implements Helper.DBHelper {
 			}
 
 		} catch (Exception e) {
-			log.error(q, e);
+			if (!tableNotExists(e) && !columnNotExists(e)) {
+				log.error(sql.toString(), e);
+			} else {
+				// ignore the exception
+			}
 
 		} finally {
 			close(p, c);
@@ -213,39 +227,28 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @return Connection
 	 * @throws SQLException the SQL exception
 	 */
-	public Connection getConnection() throws SQLException {
+	public Connection getConnection() throws Exception {
 		try {
-			if (conn != null)
-				return conn;
+			if (_conn != null) {
+				return _conn.get(X.AMINUTE);
+			}
 
-			Connection c = RDB.getConnection();
-			return c;
+			BasicDataSource ds = getDataSource("default");
+			if (ds != null) {
+				Connection c = ds.getConnection();
+				if (c != null) {
+					c.setAutoCommit(true);
+				}
+				return c;
+			}
+
+			return null;
+
 		} catch (SQLException e1) {
 			log.error(e1.getMessage(), e1);
 
 			throw e1;
 		}
-	}
-
-	// private static Map<Connection, Long[]> outdoor = new HashMap<Connection,
-	// Long[]>();
-
-	/**
-	 * Gets the SQL connection by name.
-	 *
-	 * @param name the name of the connection pool
-	 * @return the connection
-	 * @throws SQLException the SQL exception
-	 */
-	public Connection getConnection(String name) throws SQLException {
-
-		if (log.isDebugEnabled())
-			log.debug("name=" + name + ", conn=" + conn);
-
-		if (conn != null && !conn.isClosed())
-			return conn;
-
-		return RDB.getConnection(name);
 	}
 
 	/**
@@ -272,8 +275,8 @@ public class RDSHelper implements Helper.DBHelper {
 
 					// local.remove();
 					Connection c = (Connection) o;
-					if (c == conn) {
-						// forget this
+					if (c == _conn) {
+//						 forget this
 						continue;
 					}
 
@@ -288,15 +291,6 @@ public class RDSHelper implements Helper.DBHelper {
 					} finally {
 						c.close();
 					}
-					// synchronized (outdoor) {
-					// outdoor.remove(c);
-					// }
-					// } else {
-					// dd[2]--;
-					// synchronized (outdoor) {
-					// outdoor.put(c, dd);
-					// }
-					// }
 				}
 			} catch (SQLException e) {
 				if (log.isErrorEnabled())
@@ -310,10 +304,9 @@ public class RDSHelper implements Helper.DBHelper {
 	 *
 	 * @param table the table name
 	 * @param q     the query object
-	 * @param db    the db
 	 * @return boolean
 	 */
-	public boolean exists(String table, W q, String db) {
+	public boolean exists(String table, W q) {
 		/**
 		 * create the sql statement
 		 */
@@ -325,14 +318,14 @@ public class RDSHelper implements Helper.DBHelper {
 		Connection c = null;
 		PreparedStatement p = null;
 		ResultSet r = null;
+		StringBuilder sql = new StringBuilder();
 
 		try {
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null)
-				return false;
+				throw new SQLException("get connection failed!");
 
-			StringBuilder sql = new StringBuilder();
 			sql.append("select 1 from ").append(table);
 
 			String where = _where(q, c);
@@ -360,7 +353,7 @@ public class RDSHelper implements Helper.DBHelper {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 					try {
-						setParameter(p, order++, o, isOracle(c));
+						setParameter(p, order++, o);
 					} catch (Exception e) {
 						log.error("i=" + i + ", o=" + o, e);
 					}
@@ -370,15 +363,15 @@ public class RDSHelper implements Helper.DBHelper {
 			r = p.executeQuery();
 			return r.next();
 
-		} catch (SQLException e) {
-
-			log.error(q, e);
-
+		} catch (Exception e) {
+			if (!tableNotExists(e) && !columnNotExists(e)) {
+				log.error(sql.toString(), e);
+			}
 		} finally {
 			close(r, p, c);
 
 			if (log.isDebugEnabled())
-				log.debug("cost:" + t.pastms() + "ms, sql=[" + q);
+				log.debug("cost:" + t.past() + ", sql=[" + q);
 		}
 
 		return false;
@@ -393,40 +386,44 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param db    the db
 	 * @return int
 	 */
-	public int updateTable(String table, W q, V v, String db) {
+	public int updateTable(String table, W q, V v) {
 
 		if (v == null || v.isEmpty())
 			return 0;
+
+		v.append(X.UPDATED, Global.now());
 
 		/**
 		 * update it in database
 		 */
 		Connection c = null;
 		PreparedStatement p = null;
+		StringBuilder sql = new StringBuilder();
 
 		int updated = 0;
 		try {
 
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null)
-				return -1;
+				throw new SQLException("get connection failed!");
 
 			// _check(c, table, v);
 
 			/**
 			 * create the sql statement
 			 */
-			StringBuilder sql = new StringBuilder();
-			sql.append("update ").append(table).append(" set ");
-
-			boolean isoracle = isOracle(c);
+			if (this.isClickhouse(c)) {
+				sql.append("alter table ").append(table).append(" update ");
+			} else {
+				sql.append("update ").append(table).append(" set ");
+			}
 
 			StringBuilder s = new StringBuilder();
 			for (String name : v.names()) {
 				if (s.length() > 0)
 					s.append(",");
-				if (isoracle && oracle.containsKey(name)) {
+				if (isOracle(c) && oracle.containsKey(name)) {
 					s.append(oracle.get(name));
 				} else {
 					s.append(name);
@@ -440,6 +437,8 @@ public class RDSHelper implements Helper.DBHelper {
 
 			if (!X.isEmpty(where)) {
 				sql.append(" where ").append(where);
+			} else if (this.isClickhouse(c)) {
+				sql.append(" where all");
 			}
 
 			p = c.prepareStatement(sql.toString());
@@ -448,7 +447,7 @@ public class RDSHelper implements Helper.DBHelper {
 			for (String name : v.names()) {
 				Object v1 = v.value(name);
 				try {
-					setParameter(p, order++, v1, isOracle(c));
+					setParameter(p, order++, v1);
 				} catch (Exception e) {
 					log.error(name + "=" + v1, e);
 				}
@@ -458,7 +457,7 @@ public class RDSHelper implements Helper.DBHelper {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 				}
 			}
 
@@ -466,14 +465,19 @@ public class RDSHelper implements Helper.DBHelper {
 
 		} catch (Exception e) {
 
-			log.error(q + ",values=" + v.toString(), e);
-
-			if (X.isCauseBy(e, ".*Column.*not found.*")) {
-
+			if (columnNotExists(e)) {
 				// column missed
+				V v1 = v.copy();
+				q.scan(e1 -> {
+					if (e1.value != null) {
+						v1.append(e1.name, e1.value);
+					}
+				});
 				if (_alertTable(table, v, c)) {
-					return updateTable(table, q, v, db);
+					return updateTable(table, q, v);
 				}
+			} else {
+				log.error(sql.toString(), e);
 			}
 		} finally {
 			close(p, c);
@@ -482,29 +486,6 @@ public class RDSHelper implements Helper.DBHelper {
 		return updated;
 
 	}
-
-	/**
-	 * load the Bean.
-	 *
-	 * @param <T> the generic type
-	 * @param q   the query object
-	 * @param t   the Class of Bean
-	 * @return the Bean
-	 */
-	// public static <T extends Bean> T load(W q, Class<T> t) {
-	// /**
-	// * get the require annotation onGet
-	// */
-	// Table mapping = (Table) t.getAnnotation(Table.class);
-	// if (mapping == null) {
-	// if (log.isErrorEnabled())
-	// log.error("mapping missed in [" + t + "] declaretion");
-	// return null;
-	// }
-	//
-	// return load(mapping.name(), q, t);
-	//
-	// }
 
 	/**
 	 * Load the data, the data will be load(ResultSet r) method.
@@ -516,7 +497,7 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param db     the db
 	 * @return boolean
 	 */
-	public boolean load(String table, String[] fields, W q, Bean b, String db) {
+	public boolean load(String table, W q, Bean b, boolean trace) {
 		/**
 		 * create the sql statement
 		 */
@@ -531,10 +512,11 @@ public class RDSHelper implements Helper.DBHelper {
 		StringBuilder sql = new StringBuilder();
 
 		try {
-			c = getConnection(db);
+			c = getConnection();
 
-			if (c == null)
-				return false;
+			if (c == null) {
+				throw new SQLException("get connection failed!");
+			}
 
 			sql.append("select * from ").append(table);
 
@@ -572,56 +554,39 @@ public class RDSHelper implements Helper.DBHelper {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 				}
 			}
 
 			r = p.executeQuery();
 			if (r.next()) {
-				b.load(r, fields);
+				b.load(r);
 
 				return true;
 			}
 
 		} catch (Exception e) {
 
-			log.error(sql, e);
+			if (tableNotExists(e)) {
+				// create table
+				_createTable(table, V.create().append("created", System.currentTimeMillis()).append("updated",
+						System.currentTimeMillis()), c);
+
+			} else if (!columnNotExists(e)) {
+				log.error(sql, e);
+			}
 
 		} finally {
 			close(r, p, c);
 
-			if (log.isDebugEnabled())
-				log.debug("cost: " + t.pastms() + "ms, sql=" + q + ", result=" + b);
+			if (trace) {
+				log.debug("trace, load, cost = " + t.past() + ", sql=" + q + ", result=" + b);
+			} else if (log.isDebugEnabled()) {
+				log.debug("cost = " + t.past() + ", sql=" + q + ", result=" + b);
+			}
 		}
 
 		return false;
-	}
-
-	/**
-	 * Load the data from the RDBMS table, by the where and.
-	 *
-	 * @param <T>   the generic type
-	 * @param table the table
-	 * @param cols  the cols
-	 * @param q     the query object
-	 * @param clazz the Class Bean
-	 * @return the list
-	 */
-	public final <T extends Bean> Beans<T> load(String table, String[] cols, W q, Class<T> clazz) {
-		return load(table, cols, q, -1, -1, clazz);
-	}
-
-	/**
-	 * load the data from RDBMS table which associated with Bean.
-	 * 
-	 * @param <T>   the generic Bean Class
-	 * @param cols  the column name array
-	 * @param q     the query object
-	 * @param clazz the Bean Class
-	 * @return List
-	 */
-	public final <T extends Bean> Beans<T> load(String[] cols, W q, Class<T> clazz) {
-		return load(cols, q, -1, -1, clazz);
 	}
 
 	/**
@@ -634,8 +599,9 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param limit  the limit
 	 * @param t      the Bean Class
 	 * @return List
+	 * @throws SQLException
 	 */
-	public final <T extends Bean> Beans<T> load(String[] cols, W q, int offset, int limit, Class<T> t) {
+	public final <T extends Bean> Beans<T> load(W q, int offset, int limit, Class<T> t) throws SQLException {
 		/**
 		 * get the require annotation onGet
 		 */
@@ -646,7 +612,12 @@ public class RDSHelper implements Helper.DBHelper {
 			return null;
 		}
 
-		return load(mapping.name(), cols, q, offset, limit, t);
+		return load(mapping.name(), q, offset, limit, t);
+	}
+
+	@Override
+	public String toString() {
+		return "RDSHelper [_conn=" + _conn + "]";
 	}
 
 	/**
@@ -661,9 +632,8 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param clazz  the Bean Class
 	 * @return List
 	 */
-	@SuppressWarnings("deprecation")
-	public <T extends Bean> Beans<T> load(String table, String[] fields, W q, int offset, int limit, Class<T> clazz,
-			String db) throws SQLException {
+	public <T extends Bean> Beans<T> load(String table, W q, int offset, int limit, Class<T> clazz)
+			throws SQLException {
 		/**
 		 * create the sql statement
 		 */
@@ -678,53 +648,59 @@ public class RDSHelper implements Helper.DBHelper {
 		PreparedStatement p = null;
 		ResultSet r = null;
 
+		StringBuilder sql = new StringBuilder();
+
 		try {
-			c = getConnection(db);
 
-			if (c == null)
-				return null;
+			c = getConnection();
 
-			StringBuilder sql = new StringBuilder();
+			if (c == null) {
+				throw new SQLException("get connection failed, _conn=" + _conn);
+			}
+
 			sql.append("select ");
 
 			String where = _where(q, c);
 			Object[] args = q.args();
 			String orderby = _orderby(q, c);
 
-			if (isOracle(c)) {
+			if (isOracle(c) || isDM(c)) {
 
 				if (limit > 0) {
 					// select * from (select rownum rn,a.* from table_name a where rownum < limit)
 					// where rn >= offset;
 					sql.append(" * from (select rownum rn,a.* from ").append(table).append(" a ");
 
-					sql.append(" where ");
 					if (!X.isEmpty(where)) {
-						sql.append("(").append(where).append(") and ");
-					}
-					sql.append(" rownum < ").append(limit + offset);
-
-					if (!X.isEmpty(orderby)) {
-						sql.append(" ").append(orderby);
+						sql.append(" where ");
+						sql.append("(").append(where).append(") ");
 					}
 
 					if (offset < 0) {
 						offset = 0;
 					}
-					sql.append(") where rn>=").append(offset);
+
+					if (limit > 0) {
+						int n = limit + offset + 1;
+						if (n > 0) {
+							if (!X.isEmpty(where)) {
+								sql.append("and rownum<").append(n);
+							} else {
+								sql.append("where rownum<").append(n);
+							}
+						}
+					}
+
+					if (!X.isEmpty(orderby)) {
+						sql.append(" ").append(orderby);
+					}
+
+					// 注意， 这不能用 rownum, 因为外层也有自己的rownum
+					sql.append(") where rn>").append(offset);
 
 				} else {
 
-					if (fields != null) {
-						for (int i = 0; i < fields.length - 1; i++) {
-							sql.append(fields[i]).append(", ");
-						}
-
-						sql.append(fields[fields.length - 1]);
-
-					} else {
-						sql.append("*");
-					}
+					sql.append("*");
 
 					sql.append(" from ").append(table);
 					if (!X.isEmpty(where)) {
@@ -738,16 +714,7 @@ public class RDSHelper implements Helper.DBHelper {
 
 			} else {
 
-				if (fields != null) {
-					for (int i = 0; i < fields.length - 1; i++) {
-						sql.append(fields[i]).append(", ");
-					}
-
-					sql.append(fields[fields.length - 1]);
-
-				} else {
-					sql.append("*");
-				}
+				sql.append("*");
 
 				sql.append(" from ").append(table);
 				if (!X.isEmpty(where)) {
@@ -766,17 +733,19 @@ public class RDSHelper implements Helper.DBHelper {
 
 			}
 
-			if (log.isDebugEnabled())
+			if (log.isDebugEnabled()) {
 				log.debug("sql=" + sql.toString());
+			}
 
 			p = c.prepareStatement(sql.toString());
+			p.setQueryTimeout(60);
 
 			int order = 1;
 			if (args != null) {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 				}
 			}
 
@@ -784,8 +753,8 @@ public class RDSHelper implements Helper.DBHelper {
 			long rowid = offset;
 			Beans<T> list = new Beans<T>();
 			while (r.next()) {
-				T b = clazz.newInstance();
-				b.load(r, fields);
+				T b = clazz.getDeclaredConstructor().newInstance();
+				b.load(r);
 				b._rowid = rowid++;
 
 				list.add(b);
@@ -794,8 +763,18 @@ public class RDSHelper implements Helper.DBHelper {
 			return list;
 		} catch (Exception e) {
 
-			log.error(q, e);
-			throw new SQLException(e);
+			if (tableNotExists(e)) {
+
+//				log.error(sql, e);
+
+				// create table
+				_createTable(table, V.create().append("created", System.currentTimeMillis()).append("updated",
+						System.currentTimeMillis()), c);
+
+			} else if (!columnNotExists(e)) {
+				log.error(table + " - " + q, e);
+				throw new SQLException(e);
+			}
 
 		} finally {
 			close(r, p, c);
@@ -803,6 +782,8 @@ public class RDSHelper implements Helper.DBHelper {
 			if (log.isDebugEnabled())
 				log.debug("cost:" + t.pastms() + "ms, sql=" + q);
 		}
+
+		return null;
 	}
 
 	/**
@@ -833,8 +814,9 @@ public class RDSHelper implements Helper.DBHelper {
 		try {
 			c = getConnection();
 
-			if (c == null)
-				return null;
+			if (c == null) {
+				throw new SQLException("get connection failed!");
+			}
 
 			StringBuilder sql = new StringBuilder();
 			sql.append(select);
@@ -859,7 +841,13 @@ public class RDSHelper implements Helper.DBHelper {
 				if (offset < 0) {
 					offset = MAXROWS;
 				}
-				sql.append(" rownum>").append(offset).append(" and rownum<=").append(offset + limit);
+				sql.append(" rownum>").append(offset);
+				if (offset > 0) {
+					int n = offset + limit + 1;
+					if (n > 0) {
+						sql.append(" and rownum<").append(n);
+					}
+				}
 				if (!X.isEmpty(orderby)) {
 					sql.append(" ").append(orderby);
 				}
@@ -882,15 +870,15 @@ public class RDSHelper implements Helper.DBHelper {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 				}
 			}
 
 			r = p.executeQuery();
 			Beans<T> list = new Beans<T>();
 			while (r.next()) {
-				T b = clazz.newInstance();
-				b.load(r, null);
+				T b = clazz.getDeclaredConstructor().newInstance();
+				b.load(r);
 				list.add(b);
 			}
 
@@ -903,30 +891,10 @@ public class RDSHelper implements Helper.DBHelper {
 			close(r, p, c);
 
 			if (log.isDebugEnabled())
-				log.debug("cost:" + t.pastms() + "ms, sql=" + q);
+				log.debug("cost:" + t.past() + ", sql=" + q);
 		}
-		return Beans.create();
-	}
 
-	/**
-	 * Load the list data from the RDBMS table.
-	 *
-	 * @param <T>    the generic Bean Class
-	 * @param table  the table name
-	 * @param fields the fields to load
-	 * @param q      the query object
-	 * @param offset the offset
-	 * @param limit  the limit
-	 * @param clazz  the Bean Class
-	 * @return Beans
-	 */
-	public <T extends Bean> Beans<T> load(String table, String[] fields, W q, int offset, int limit, Class<T> clazz) {
-		try {
-			return load(table, fields, q, offset, limit, clazz, Helper.DEFAULT);
-		} catch (Exception e) {
-			log.error(e.getMessage(), e);
-		}
-		return null;
+		return Beans.create();
 	}
 
 	/**
@@ -937,10 +905,16 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param db    the db
 	 * @return int
 	 */
-	public int insertTable(String table, V sets, String db) {
+	public int insertTable(String table, V sets) {
 
-		if (sets == null || sets.isEmpty())
+		if (sets == null || sets.isEmpty()) {
+			log.warn("not data to insert, ignore");
 			return 0;
+		}
+
+		long t1 = Global.now();
+		sets.append(X.CREATED, t1).append(X.UPDATED, t1);
+		sets.append("_node", Global.id());
 
 		/**
 		 * insert it in database
@@ -948,16 +922,17 @@ public class RDSHelper implements Helper.DBHelper {
 		Connection c = null;
 
 		try {
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null)
-				return -1;
+				throw new SQLException("get connection failed!");
 
 			return insertTable(table, sets, c);
 
 		} catch (Exception e) {
-			if (log.isErrorEnabled())
+			if (log.isErrorEnabled()) {
 				log.error(sets.toString(), e);
+			}
 
 		} finally {
 			close(c);
@@ -968,25 +943,27 @@ public class RDSHelper implements Helper.DBHelper {
 
 	private int insertTable(String table, V sets, Connection c) {
 
-		if (sets == null || sets.isEmpty())
+		if (sets == null || sets.isEmpty()) {
+			log.warn("not data to insert, ignore");
 			return 0;
+		}
 
 		/**
 		 * insert it in database
 		 */
 		PreparedStatement p = null;
+		StringBuilder sql = new StringBuilder();
 
 		try {
 
 			if (c == null)
-				return -1;
+				throw new SQLException("get connection failed!");
 
 			// _check(c, table, sets);
 
 			/**
 			 * create the sql statement
 			 */
-			StringBuilder sql = new StringBuilder();
 			sql.append("insert into ").append(table).append(" (");
 			StringBuilder s = new StringBuilder();
 			int total = 0;
@@ -1013,31 +990,32 @@ public class RDSHelper implements Helper.DBHelper {
 			int order = 1;
 			for (String name : sets.names()) {
 				Object v = sets.value(name);
-				setParameter(p, order++, v, isOracle(c));
+				setParameter(p, order++, v);
 			}
 
 			return p.executeUpdate();
 
 		} catch (Exception e) {
 
-//			GLog.dblog.error(table, "insert", "v=" + sets, e, null, Helper.DEFAULT);
-
 			// if the table not exists, create it
-			if (X.isCauseBy(e, ".*Table.*not found.*")) {
-				// table missed
+			if (columnNotExists(e)) {
 
-				if (_createTable(table, sets, c)) {
-					return insertTable(table, sets, c);
-				}
-			} else if (X.isCauseBy(e, ".*Column.*not found.*")) {
+				log.warn(sql.toString() + "\n" + sets.toString(), e);
 
 				// column missed
 				if (_alertTable(table, sets, c)) {
 					return insertTable(table, sets, c);
 				}
+			} else if (tableNotExists(e)) {
+				// table missed
+				log.warn(sql.toString() + "\n" + sets.toString(), e);
+
+				if (_createTable(table, sets, c)) {
+					return insertTable(table, sets, c);
+				}
 
 			} else {
-				log.error(sets.toString(), e);
+				log.error(sql.toString() + "\n" + sets.toString(), e);
 			}
 
 		} finally {
@@ -1046,17 +1024,17 @@ public class RDSHelper implements Helper.DBHelper {
 		return 0;
 	}
 
+	private static boolean tableNotExists(Exception e) {
+		return X.isCauseBy(e,
+				".*(Table.*not found|Table.*doesn't exist|Invalid table|Table.*does not exist|无效的表|表.*不存在|关系.*不存在).*");
+	}
+
+	private static boolean columnNotExists(Exception e) {
+		return X.isCauseBy(e,
+				".*(Column.*not found|No such column|Missing columns|There is no column|Unknown column|Invalid column|无效的列|字段不存在|字段.*不存在).*");
+	}
+
 	private static String _name(String name, Connection c) {
-		// the col need to be transfer ? in oracle
-//		try {
-//			if (isOracle(c)) {
-//				if (oracle.containsKey(name)) {
-//					return oracle.get(name);
-//				}
-//			}
-//		} catch (Exception e) {
-//			log.error(e.getMessage(), e);
-//		}
 		return name;
 	}
 
@@ -1075,10 +1053,21 @@ public class RDSHelper implements Helper.DBHelper {
 
 					StringBuilder sql = new StringBuilder("alter table ").append(table).append(" add ");
 
-					sql.append(_name(name, c)).append(" ").append(_type(v.value(name), c));
+					if (this.isClickhouse(c)) {
+						sql.append(" column ");
+					}
 
-					stat.execute(sql.toString());
+					try {
+						if (v.value(name) != null) {
 
+							sql.append(_name(name, c)).append(" ").append(_type(v.value(name), c));
+
+							stat.execute(sql.toString());
+						}
+					} catch (Exception e) {
+						log.error(sql.toString(), e);
+						v.remove(name);
+					}
 				}
 			}
 
@@ -1123,10 +1112,11 @@ public class RDSHelper implements Helper.DBHelper {
 
 		Statement stat = null;
 
+		StringBuilder sql = new StringBuilder("create table ").append(table).append(" ( ");
+
 		try {
 			stat = c.createStatement();
 
-			StringBuilder sql = new StringBuilder("create table ").append(table).append(" ( ");
 			int i = 0;
 			for (String name : v.names()) {
 				if (i > 0) {
@@ -1137,11 +1127,16 @@ public class RDSHelper implements Helper.DBHelper {
 				i++;
 			}
 			sql.append(" ) ");
+
+			if (this.isClickhouse(c)) {
+				sql.append("engine = MergeTree() order by tuple() SETTINGS index_granularity = 8192");
+			}
+
 			stat.execute(sql.toString());
 
 			return true;
 		} catch (Exception e) {
-			log.error(e.getMessage(), e);
+			log.error(sql.toString(), e);
 
 		} finally {
 			close(stat);
@@ -1150,24 +1145,36 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	private String _type(Object v, Connection c) {
-		if(v == null) {
-			return "varchar(100)";
+		if (v == null) {
+			if (this.isClickhouse(c)) {
+				return "Nullable(String)";
+			}
+			return "VARCHAR";
 		} else if (v instanceof Long || v instanceof Integer) {
 			return "bigint";
 		} else if (v instanceof Float || v instanceof Double) {
-			return "double";
-		} else if (v instanceof Collection || v.getClass().isArray()) {
-			return "varchar(" + Math.max(v == null ? 0 : (v.toString().length() * 2), 100) + ")[]";
+			return "double precision";
 		} else {
-			try {
-				if (isOracle(c)) {
-					return "varchar2(" + Math.max(v == null ? 0 : (v.toString().length() * 2), 100) + ")";
+			if (v instanceof Collection || v.getClass().isArray()) {
+				if (this.isPG(c)) {
+					List<Object> l1 = X.asList(v, s -> s);
+					if (l1 != null && !l1.isEmpty()) {
+						Object o = l1.get(0);
+						if (o instanceof Long || o instanceof Integer) {
+							return "bigint[]";
+						} else if (o instanceof Float || o instanceof Double) {
+							return "float[]";
+						} else {
+							return "text[]";
+						}
+					}
 				}
-			} catch (Exception e) {
-				log.error(e.getMessage(), e);
 			}
-			return "varchar(" + Math.max(v == null ? 0 : (v.toString().length() * 2), 100) + ")";
+			if (this.isClickhouse(c)) {
+				return "Nullable(String)";
+			}
 
+			return "VARCHAR";
 		}
 	}
 
@@ -1190,13 +1197,10 @@ public class RDSHelper implements Helper.DBHelper {
 		ResultSet r = null;
 
 		try {
-			if (X.isEmpty(db)) {
-				c = getConnection();
-			} else {
-				c = getConnection(db);
-			}
+			c = getConnection();
+
 			if (c == null)
-				return null;
+				throw new SQLException("get connection failed!");
 
 			/**
 			 * create the sql statement
@@ -1230,7 +1234,7 @@ public class RDSHelper implements Helper.DBHelper {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 				}
 			}
 
@@ -1248,32 +1252,6 @@ public class RDSHelper implements Helper.DBHelper {
 		}
 
 		return null;
-	}
-
-	/**
-	 * get the list of the column.
-	 *
-	 * @param <T> the generic Bean Class
-	 * @param col the column name
-	 * @param q   the query object
-	 * @param s   the offset
-	 * @param n   the limit
-	 * @param t   the Bean class
-	 * @return List
-	 * @deprecated
-	 */
-	public final <T> List<T> getList(String col, W q, int s, int n, Class<? extends Bean> t) {
-		/**
-		 * get the require annotation onGet
-		 */
-		Table mapping = (Table) t.getAnnotation(Table.class);
-		if (mapping == null) {
-			if (log.isErrorEnabled())
-				log.error("mapping missed in [" + t + "] declaretion");
-			return null;
-		}
-
-		return getList(mapping.name(), col, q, s, n);
 	}
 
 	/**
@@ -1324,7 +1302,7 @@ public class RDSHelper implements Helper.DBHelper {
 			c = getConnection();
 
 			if (c == null)
-				return null;
+				throw new SQLException("get connection failed!");
 
 			/**
 			 * create the sql statement
@@ -1368,7 +1346,7 @@ public class RDSHelper implements Helper.DBHelper {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 				}
 			}
 
@@ -1376,99 +1354,6 @@ public class RDSHelper implements Helper.DBHelper {
 			if (r.next()) {
 				return (T) r.getObject(1);
 			}
-
-		} catch (Exception e) {
-
-			log.error(q, e);
-
-		} finally {
-			close(r, p, c);
-		}
-
-		return null;
-	}
-
-	/**
-	 * get the list of the col.
-	 *
-	 * @param <T>   the generic Bean Class
-	 * @param table the table name
-	 * @param col   the column name
-	 * @param q     the query object
-	 * @param s     the offset
-	 * @param n     the limit
-	 * @return List
-	 * @deprecated
-	 */
-	@SuppressWarnings("unchecked")
-	public final <T> List<T> getList(String table, String col, W q, int s, int n) {
-
-		/**
-		 * search it in database
-		 */
-		Connection c = null;
-		PreparedStatement p = null;
-		ResultSet r = null;
-
-		try {
-			c = getConnection();
-
-			if (c == null)
-				return null;
-
-			/**
-			 * create the sql statement
-			 */
-			StringBuilder sql = new StringBuilder();
-			sql.append("select ").append(col).append(" from ").append(table);
-			String where = _where(q, c);
-			Object[] args = q.args();
-			String orderby = _orderby(q, c);
-
-			if (!X.isEmpty(where)) {
-				sql.append(" where ").append(where);
-			}
-
-			if (isOracle(c)) {
-				if (X.isEmpty(where)) {
-					sql.append(" where ");
-				} else {
-					sql.append(" and ");
-				}
-				if (s < 0) {
-					s = MAXROWS;
-				}
-				sql.append(" rownum>").append(s).append(" and rownum<=").append(s + n);
-				if (!X.isEmpty(orderby)) {
-					sql.append(" ").append(orderby);
-				}
-			} else {
-				if (!X.isEmpty(orderby)) {
-					sql.append(" ").append(orderby);
-				}
-				sql.append(" limit ").append(n);
-				if (s > 0) {
-					sql.append(" offset ").append(s);
-				}
-			}
-
-			p = c.prepareStatement(sql.toString());
-
-			int order = 1;
-			if (args != null) {
-				for (int i = 0; i < args.length; i++) {
-					Object o = args[i];
-
-					setParameter(p, order++, o, isOracle(c));
-				}
-			}
-
-			r = p.executeQuery();
-			List<T> list = new ArrayList<T>();
-			while (r.next()) {
-				list.add((T) r.getObject(1));
-			}
-			return list;
 
 		} catch (Exception e) {
 
@@ -1522,37 +1407,12 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	/**
-	 * load record in database.
-	 *
-	 * @param <T>   the generic Bean Class
-	 * @param table the table name
-	 * @param q     the query object
-	 * @param clazz the Bean class
-	 * @param db    the db
-	 * @return Bean
-	 */
-	public <T extends Bean> T load(String table, String[] fields, W q, Class<T> clazz, String db) {
-		try {
-			T b = (T) clazz.newInstance();
-
-			if (load(table, fields, q, b, db)) {
-				return b;
-			}
-		} catch (Exception e) {
-
-			log.error(e.getMessage(), e);
-
-		}
-		return null;
-	}
-
-	/**
 	 * test if confiured RDS
 	 * 
 	 * @return true: configured, false: no
 	 */
 	public boolean isConfigured() {
-		return RDB.isConfigured();
+		return getDataSource("default") != null;
 	}
 
 	/**
@@ -1563,8 +1423,8 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param db    the db
 	 * @return the number of data
 	 */
-	public long count(String table, W q, String db) {
-		return count(table, q, "*", db);
+	public long count(String table, W q) {
+		return count(table, q, "*");
 	}
 
 	/**
@@ -1576,7 +1436,7 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param db    the db
 	 * @return the list of Object
 	 */
-	public List<?> distinct(String table, String name, W q, String db) {
+	public List<?> distinct(String table, String name, W q) {
 		/**
 		 * create the sql statement
 		 */
@@ -1593,10 +1453,10 @@ public class RDSHelper implements Helper.DBHelper {
 
 		try {
 
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null)
-				return null;
+				throw new SQLException("get connection failed!");
 
 			StringBuilder sql = new StringBuilder();
 
@@ -1615,7 +1475,7 @@ public class RDSHelper implements Helper.DBHelper {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 				}
 			}
 
@@ -1626,17 +1486,23 @@ public class RDSHelper implements Helper.DBHelper {
 			}
 
 			if (log.isDebugEnabled())
-				log.debug(
-						"load - cost=" + t.pastms() + "ms, collection=" + table + ", sql=" + sql + ", result=" + list);
+				log.debug("load - cost=" + t.past() + ", collection=" + table + ", sql=" + sql + ", result=" + list);
 
 			if (t.pastms() > 10000) {
-				log.warn("load - cost=" + t.pastms() + "ms, collection=" + table + ", sql=" + sql + ", result=" + list);
+				log.warn("load - cost=" + t.past() + ", collection=" + table + ", sql=" + sql + ", result=" + list);
 			}
 
 			return list;
 		} catch (Exception e) {
 
-			log.error(q, e);
+			if (tableNotExists(e)) {
+				// create table
+				_createTable(table, V.create().append("created", System.currentTimeMillis()).append("updated",
+						System.currentTimeMillis()), c);
+
+			} else if (!columnNotExists(e)) {
+				log.error(q, e);
+			}
 
 		} finally {
 			close(r, p, c);
@@ -1706,7 +1572,6 @@ public class RDSHelper implements Helper.DBHelper {
 					}
 				}
 
-//				out.println(jo.toString());
 				out.println(Base64.getEncoder().encodeToString(jo.toString().getBytes()));
 			}
 
@@ -1716,7 +1581,7 @@ public class RDSHelper implements Helper.DBHelper {
 		} catch (Exception e) {
 			log.error(e.getMessage(), e);
 		} finally {
-			close(r, stat);
+			close(r, stat, c);
 		}
 	}
 
@@ -1756,7 +1621,7 @@ public class RDSHelper implements Helper.DBHelper {
 			String tablename = jo.getString("_table");
 			v.remove("_table");
 
-			delete(tablename, W.create(X.ID, jo.get(X.ID)), Helper.DEFAULT);
+			delete(tablename, W.create().and(X.ID, jo.get(X.ID)));
 			insertTable(tablename, v, c);
 		} catch (Exception e) {
 			log.error(e.getMessage(), e);
@@ -1764,14 +1629,56 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	transient Boolean _oracle = null;
+	transient Boolean _pg = null;
 
-	private boolean isOracle(Connection c) throws SQLException {
-		if (_oracle == null) {
-			String s = c.getMetaData().getDatabaseProductName();
-			String[] ss = X.split(s, "[ /]");
-			_oracle = X.isSame(ss[0], "oracle");
-		}
+	private boolean isOracle(Connection c) {
+		_checkDriver(c);
 		return _oracle;
+	}
+
+	private boolean isPG(Connection c) {
+		_checkDriver(c);
+		return _pg;
+	}
+
+	private void _checkDriver(Connection c) {
+		try {
+			if (_oracle == null || _mysql == null) {
+				String s = c.getMetaData().getDatabaseProductName();
+
+				log.warn("driver=" + s);
+
+				_oracle = s.indexOf("Oracle") > -1;
+				_mysql = s.indexOf("MySQL") > -1;
+				_mariadb = s.indexOf("Mariadb") > -1;
+				_dm = s.indexOf("DM") > -1;
+				_pg = s.indexOf("PostgreSQL") > -1;
+				_clickhouse = s.indexOf("ClickHouse") > -1;
+			}
+		} catch (Exception e) {
+			log.error(e.getMessage(), e);
+		}
+	}
+
+	transient Boolean _mysql = null;
+	transient Boolean _mariadb = null;
+	transient Boolean _dm = null;
+	transient Boolean _clickhouse = null;
+
+	@SuppressWarnings("unused")
+	private boolean isMysql(Connection c) {
+		_checkDriver(c);
+		return _mysql;
+	}
+
+	private boolean isDM(Connection c) {
+		_checkDriver(c);
+		return _dm;
+	}
+
+	private boolean isClickhouse(Connection c) {
+		_checkDriver(c);
+		return _clickhouse;
 	}
 
 	/**
@@ -1784,46 +1691,54 @@ public class RDSHelper implements Helper.DBHelper {
 	 * @param db    the db
 	 * @return the int
 	 */
-	public int inc(String table, W q, String name, int n, V sets, String db) {
+	public int inc(String table, W q, String name, int n, V sets) {
 
+		Connection c = null;
+
+		try {
+			c = getConnection();
+			if (c == null)
+				throw new SQLException("get connection failed!");
+
+			int n1 = _inc(table, q, name, n, c);
+			if (sets != null && !sets.isEmpty()) {
+				this.updateTable(table, q, sets);
+			}
+			return n1;
+		} catch (Exception e) {
+
+			if (tableNotExists(e)) {
+				// create table
+				_createTable(table, V.create().append(name, n).append("created", System.currentTimeMillis())
+						.append("updated", System.currentTimeMillis()), c);
+
+			} else if (!columnNotExists(e)) {
+
+				log.error(e.getMessage(), e);
+			}
+		} finally {
+			close(c);
+		}
+		return -1;
+
+	}
+
+	private int _inc(String table, W q, String name, int n, Connection c) {
 		/**
 		 * update it in database
 		 */
-		Connection c = null;
 		PreparedStatement p = null;
 		ResultSet r = null;
+		StringBuilder sql = new StringBuilder();
 
 		try {
-			if (X.isEmpty(db)) {
-				c = getConnection();
-			} else {
-				c = getConnection(db);
-			}
-			if (c == null)
-				return -1;
 
 			/**
 			 * create the sql statement
 			 */
-			StringBuilder sql = new StringBuilder();
 			sql.append("update ").append(table).append(" set ").append(name).append("=").append(name).append("+?");
 
-			boolean isoracle = isOracle(c);
-
-			if (sets != null) {
-				StringBuilder s = new StringBuilder();
-				for (String s1 : sets.names()) {
-					if (s.length() > 0)
-						s.append(",");
-					if (isoracle && oracle.containsKey(s1)) {
-						s.append(oracle.get(s1));
-					} else {
-						s.append(s1);
-					}
-					s.append("=?");
-				}
-				sql.append(s);
-			}
+//			boolean isoracle = isOracle(c);
 
 			String where = _where(q, c);
 			Object[] args = q.args();
@@ -1835,24 +1750,13 @@ public class RDSHelper implements Helper.DBHelper {
 			p = c.prepareStatement(sql.toString());
 
 			int order = 1;
-			setParameter(p, order++, n, isOracle(c));
-
-			if (sets != null) {
-				for (String s1 : sets.names()) {
-					Object v = sets.value(s1);
-					try {
-						setParameter(p, order++, v, isOracle(c));
-					} catch (Exception e) {
-						log.error(s1 + "=" + v, e);
-					}
-				}
-			}
+			setParameter(p, order++, n);
 
 			if (args != null) {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 				}
 			}
 
@@ -1860,37 +1764,74 @@ public class RDSHelper implements Helper.DBHelper {
 
 		} catch (Exception e) {
 
-			log.error(q, e);
+			log.error(sql.toString(), e);
 
-			if (X.isCauseBy(e, ".*Column.*not found.*")) {
+			if (columnNotExists(e)) {
 
 				// column missed
 				if (_alertTable(table, V.create().append(name, n), c)) {
-					return inc(table, q, name, n, sets, db);
+					return _inc(table, q, name, n, c);
 				}
+
 			}
 
 		} finally {
-			close(c, p, r);
+			close(p, r);
 		}
 
 		return 0;
 	}
 
-	public BasicDataSource getDB(String db) {
-		return RDB.getDataSource(db);
+	public BasicDataSource getDB(String name) {
+		BasicDataSource external = dss.get(name);
+		if (external == null && conf != null) {
+			String url = conf.getString("db[" + name + "].url", null);
+			String username = conf.getString("db[" + name + "].user", null);
+			String passwd = conf.getString("db[" + name + "].passwd", null);
+
+			if (!X.isEmpty(url)) {
+
+				String D = _getDiver(url);
+
+				int N = conf.getInt("db[" + name + "].conns", MAX_ACTIVE_NUMBER);
+
+				external = _get(D, username, passwd, url, N);
+				log.info(name + ".driver=" + D);
+
+				dss.put(name, external);
+			}
+		}
+
+		return external;
 	}
 
-	public void createIndex(String table, LinkedHashMap<String, Integer> ss, String db) {
+	public void createIndex(String table, LinkedHashMap<String, Object> ss, boolean unique) {
+
 		Connection c = null;
 		Statement stat = null;
 		StringBuilder sb = new StringBuilder();
 		try {
-			c = getConnection(db);
+			c = getConnection();
 			stat = c.createStatement();
 			String indexname = table + "_index_" + UID.id(ss.toString());
-			sb.append("create index ").append(indexname);
-			sb.append(" on ").append(table).append("(");
+
+			if (this.isClickhouse(c)) {
+				if (ss.size() <= 1) {
+					// not need
+					return;
+				}
+				sb.append("alter table " + table);
+				sb.append(" add index " + indexname);
+				sb.append("(");
+
+			} else {
+				sb.append("create ");
+				if (unique) {
+					sb.append(" unique ");
+				}
+				sb.append(" index ").append(indexname);
+				sb.append(" on ").append(table).append("(");
+			}
 
 			StringBuilder sb1 = new StringBuilder();
 			int n = 0;
@@ -1898,8 +1839,10 @@ public class RDSHelper implements Helper.DBHelper {
 				if (sb1.length() > 0)
 					sb1.append(",");
 				sb1.append(s);
-				if (X.toInt(ss.get(s)) < 1) {
-					sb1.append(" ").append("desc");
+				if (!this.isClickhouse(c)) {
+					if (X.toInt(ss.get(s)) < 1) {
+						sb1.append(" ").append("desc");
+					}
 				}
 				n++;
 				if (n > 4) {
@@ -1907,12 +1850,21 @@ public class RDSHelper implements Helper.DBHelper {
 				}
 			}
 			sb.append(sb1.toString()).append(")");
+
+			if (this.isClickhouse(c)) {
+				sb.append("	type minmax GRANULARITY 3");
+			}
+
 			stat.executeUpdate(sb.toString());
 
-		} catch (Exception e) {
+			if (log.isDebugEnabled()) {
+				log.debug("createIndex, sql=" + sb.toString());
+			}
 
-			// log.error(sb.toString(), e);
-			log.warn("indexes=" + getIndexes(table, db));
+		} catch (Exception e) {
+			if (e.getMessage().indexOf("already exists") == -1) {
+				log.error(sb.toString(), e);
+			}
 
 		} finally {
 			close(stat, c);
@@ -1921,7 +1873,7 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public List<Map<String, Object>> getIndexes(String table, String db) {
+	public List<Map<String, Object>> getIndexes(String table) {
 
 		List<Map<String, Object>> l1 = new ArrayList<Map<String, Object>>();
 
@@ -1929,12 +1881,33 @@ public class RDSHelper implements Helper.DBHelper {
 		ResultSet r = null;
 
 		try {
-			c = RDB.getConnection(db);
+
+			c = getConnection();
+
 			DatabaseMetaData d1 = c.getMetaData();
-			r = d1.getIndexInfo(null, null, table, false, true);
+//			r = d1.getIndexInfo(null, null, null, false, true);
+//			while (r.next()) {
+//				Bean b = new Bean();
+//				b.load(r);
+//				String name = r.getString("index_name").toLowerCase();
+//				log.debug("index=" + name + ", column=" + r.getString("column_name").toLowerCase() + ", r=" + b.json());
+//			}
+//			r.close();
+
+			if (this.isOracle(c) || this.isDM(c)) {
+				r = d1.getIndexInfo(null, null, null, false, true);
+			} else {
+				r = d1.getIndexInfo(null, null, table, false, true);
+			}
 
 			Map<String, Map<String, Object>> indexes = new TreeMap<String, Map<String, Object>>();
 			while (r.next()) {
+
+				String table1 = r.getString("table_name");
+				if (!X.isSame(table, table1)) {
+					continue;
+				}
+
 				String name = r.getString("index_name").toLowerCase();
 				Map<String, Object> m = indexes.get(name);
 				if (m == null) {
@@ -1944,7 +1917,6 @@ public class RDSHelper implements Helper.DBHelper {
 
 				// ResultSetMetaData m1 = r.getMetaData();
 				// for (int i = 1; i <= m1.getColumnCount(); i++) {
-				// System.out.println(m1.getColumnName(i) + "=" + r.getObject(i));
 				// }
 				m.put(r.getString("column_name").toLowerCase(), X.isSame(r.getString("asc_or_desc"), "A") ? 1 : -1);
 			}
@@ -1967,13 +1939,15 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public void dropIndex(String table, String name, String db) {
+	public void dropIndex(String table, String name) {
 		Connection c = null;
 		Statement stat = null;
 		try {
-			c = RDB.getConnection(db);
+
+			c = getConnection();
 			stat = c.createStatement();
 			stat.executeUpdate("drop index " + name);
+
 		} catch (Exception e) {
 			log.error(e.getMessage(), e);
 		} finally {
@@ -1982,7 +1956,7 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public int insertTable(String table, List<V> values, String db) {
+	public int insertTable(String table, List<V> values) {
 
 		if (values == null || values.isEmpty())
 			return 0;
@@ -1996,7 +1970,7 @@ public class RDSHelper implements Helper.DBHelper {
 			if (X.isEmpty(values))
 				return 0;
 
-			c = getConnection(db);
+			c = getConnection();
 
 			// _check(c, table, values.get(0));
 
@@ -2029,10 +2003,18 @@ public class RDSHelper implements Helper.DBHelper {
 			p = c.prepareStatement(sql.toString());
 
 			int order = 1;
-			for (V sets : values) {
-				for (String name : sets.names()) {
-					Object v = sets.value(name);
-					setParameter(p, order++, v, isOracle(c));
+			for (V v : values) {
+
+				if (v == null || v.isEmpty())
+					return 0;
+
+				long t1 = Global.now();
+				v.append(X.CREATED, t1).append(X.UPDATED, t1);
+				v.append("_node", Global.id());
+
+				for (String name : v.names()) {
+					Object v1 = v.value(name);
+					setParameter(p, order++, v1);
 				}
 
 				p.addBatch();
@@ -2045,35 +2027,82 @@ public class RDSHelper implements Helper.DBHelper {
 			log.error(values.toString(), e);
 
 		} finally {
-			close(p);
+			close(p, c);
 		}
 		return 0;
 	}
 
-	private Connection conn = null;
+	private Pool<Connection> _conn = null;
 
-	public static DBHelper create(Connection c) {
+	public static DBHelper create(String url, String user, String passwd, int conns, int timeout, String locale) {
+
+		Pool<Connection> pool = Pool.create(conns, conns, new IPoolFactory<Connection>() {
+
+			@Override
+			public boolean check(Connection c) {
+				try {
+					return !c.isClosed();
+				} catch (SQLException e) {
+					log.error(e.getMessage(), e);
+				}
+				return false;
+			}
+
+			@Override
+			public Connection create() {
+				try {
+					if (!X.isEmpty(url)) {
+						return getConnection(url, user, passwd, locale);
+					}
+				} catch (SQLException e) {
+					log.error("url=" + url + ", locale=" + locale, e);
+				}
+				return null;
+			}
+
+			@Override
+			public void destroy(Connection c) {
+				try {
+					c.close();
+				} catch (SQLException e) {
+					log.error(e.getMessage(), e);
+				}
+			}
+
+		});
+
+		return create(pool);
+
+	}
+
+	public static DBHelper create(Pool<Connection> c) {
+
 		RDSHelper d = new RDSHelper();
-		d.conn = c;
+		d._conn = c;
+
+		if (log.isDebugEnabled()) {
+			log.debug("create DBHelper from pool, c=" + c);
+		}
+
 		return d;
 	}
 
 	@Override
-	public List<JSON> listTables(String db) {
+	public List<JSON> listTables() {
 
 		List<JSON> list = new ArrayList<JSON>();
 
 		Connection c = null;
 		ResultSet r = null;
 		try {
-			c = getConnection(db);
+			c = getConnection();
 
 			DatabaseMetaData md = c.getMetaData();
 			r = md.getTables(null, null, null, null);
 
 			while (r.next()) {
 				Bean b = new Bean();
-				b.load(r, null);
+				b.load(r);
 				list.add(b.json());
 			}
 
@@ -2096,7 +2125,7 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public <T extends Bean> Cursor<T> query(String table, W q, int s, int n, Class<T> t, String db) {
+	public <T extends Bean> Cursor<T> cursor(String table, W q, long offset, Class<T> t) {
 		/**
 		 * search it in database
 		 */
@@ -2104,54 +2133,51 @@ public class RDSHelper implements Helper.DBHelper {
 		PreparedStatement p = null;
 		ResultSet r = null;
 
+		StringBuilder sql = new StringBuilder();
+
 		try {
 			c = getConnection();
 
 			if (c == null)
-				return null;
-
-			StringBuilder sql = new StringBuilder();
-			sql.append("select * ");
+				throw new SQLException("get connection failed!");
 
 			String where = _where(q, c);
 			Object[] args = q.args();
 			String orderby = _orderby(q, c);
 
-			sql.append(" from ").append(table);
-			if (!X.isEmpty(where)) {
-				sql.append(" where ").append(where);
-			}
+			if (this.isOracle(c) || this.isDM(c)) {
+				// select * from (select rownum rn,a.* from table_name a where rownum < limit)
+				// where rn >= offset;
+				sql.append("select * from (select rownum rn,a.* from ").append(table).append(" a ");
 
-			if (!X.isEmpty(orderby)) {
-				sql.append(" ").append(orderby);
-			}
-
-			if (isOracle(c)) {
-				if (X.isEmpty(where)) {
+				if (!X.isEmpty(where)) {
 					sql.append(" where ");
-				} else {
-					sql.append(" and ");
+					sql.append("(").append(where).append(") ");
 				}
-				if (s < 0) {
-					s = MAXROWS;
-				}
-				sql.append(" rownum>").append(s).append(" and rownum<=").append(s + n);
 
 				if (!X.isEmpty(orderby)) {
 					sql.append(" ").append(orderby);
 				}
+				sql.append(") where rn>").append(offset);
+
 			} else {
+				sql.append("select * from ").append(table);
+
+				if (!X.isEmpty(where)) {
+					sql.append(" where ").append(where);
+				}
+
 				if (!X.isEmpty(orderby)) {
 					sql.append(" ").append(orderby);
 				}
 
-				if (n > 0) {
-					sql.append(" limit ").append(n);
-				}
-				if (s > 0) {
-					sql.append(" offset ").append(s);
+				if (offset > 0) {
+					sql.append(" offset ").append(offset);
 				}
 			}
+
+			if (log.isDebugEnabled())
+				log.debug("sql=" + sql.toString());
 
 			p = c.prepareStatement(sql.toString());
 
@@ -2160,30 +2186,39 @@ public class RDSHelper implements Helper.DBHelper {
 				for (int i = 0; i < args.length; i++) {
 					Object o = args[i];
 
-					setParameter(p, order++, o, isOracle(c));
+					setParameter(p, order++, o);
 				}
 			}
 
 			r = p.executeQuery();
 
-			return _cursor(t, r, p, c);
+			return _cursor(t, r, p, c); // close the connection in cursor
 		} catch (Exception e) {
+
+			if (tableNotExists(e)) {
+				// create table
+				_createTable(table, V.create().append("created", System.currentTimeMillis()).append("updated",
+						System.currentTimeMillis()), c);
+
+			} else if (!columnNotExists(e)) {
+				log.error(sql.toString(), e);
+			}
+
 			close(r, p, c);
-
-			log.error(q, e);
-
 		}
+
 		return null;
 	}
 
 	private <T extends Bean> Cursor<T> _cursor(final Class<T> t, final ResultSet r, final PreparedStatement p,
 			final Connection c) {
+
 		return new Cursor<T>() {
 
 			@Override
 			public boolean hasNext() {
 				try {
-					r.next();
+					return r.next();
 				} catch (SQLException e) {
 					log.error(e.getMessage(), e);
 				}
@@ -2193,8 +2228,8 @@ public class RDSHelper implements Helper.DBHelper {
 			@Override
 			public T next() {
 				try {
-					T t1 = t.newInstance();
-					t1.load(r, null);
+					T t1 = t.getDeclaredConstructor().newInstance();
+					t1.load(r);
 					return t1;
 				} catch (Exception e) {
 					log.error(e.getMessage(), e);
@@ -2232,6 +2267,7 @@ public class RDSHelper implements Helper.DBHelper {
 			return list;
 		} catch (Exception e) {
 			log.error(tablename, e);
+
 		} finally {
 			close(r, stat, c);
 		}
@@ -2240,7 +2276,7 @@ public class RDSHelper implements Helper.DBHelper {
 
 	@SuppressWarnings("unchecked")
 	@Override
-	public <T> T sum(String table, W q, String name, String db) {
+	public <T> T sum(String table, W q, String name) {
 
 		/**
 		 * create the sql statement
@@ -2258,10 +2294,10 @@ public class RDSHelper implements Helper.DBHelper {
 		Object n = 0;
 		try {
 
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null) {
-				n = 0;
+				throw new SQLException("get connection failed!");
 			} else {
 				StringBuilder sum = new StringBuilder();
 				sum.append("select sum(" + name + ") t from ").append(table);
@@ -2279,7 +2315,7 @@ public class RDSHelper implements Helper.DBHelper {
 					for (int i = 0; i < args.length; i++) {
 						Object o = args[i];
 
-						setParameter(p, order++, o, isOracle(c));
+						setParameter(p, order++, o);
 					}
 				}
 
@@ -2289,151 +2325,75 @@ public class RDSHelper implements Helper.DBHelper {
 				}
 			}
 		} catch (Exception e) {
-			log.error(q, e);
+
+			if (!tableNotExists(e) && !columnNotExists(e)) {
+				log.error(q, e);
+			}
 
 		} finally {
 			close(r, p, c);
 
 			if (log.isDebugEnabled())
-				log.debug("sum, cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
+				log.debug("sum, cost:" + t.past() + ", sql=" + q + ", n=" + n);
 		}
 
 		return (T) n;
 	}
 
-	public static Connection getConnection(String name, String url, String username, String passwd)
+	/**
+	 * 
+	 * 
+	 * @param url
+	 * @param username
+	 * @param passwd
+	 * @param locale
+	 * @return
+	 * @throws SQLException
+	 */
+	public static Connection getConnection(String url, String username, String passwd, String locale)
 			throws SQLException {
-		return RDB.getConnectionByUrl(name, url, username, passwd);
-	}
 
-	@SuppressWarnings("unchecked")
-	@Override
-	public <T> T max(String table, W q, String name, String db) {
+		String D = _getDiver(url);
 
-		/**
-		 * create the sql statement
-		 */
-		TimeStamp t = TimeStamp.create();
-
-		// log.debug("sql:" + sql.toString());
-
-		/**
-		 * search it in database
-		 */
-		Connection c = null;
-		PreparedStatement p = null;
-		ResultSet r = null;
-		Object n = 0;
-		try {
-
-			c = getConnection(db);
-
-			if (c == null) {
-				n = 0;
-			} else {
-				StringBuilder sum = new StringBuilder();
-				sum.append("select max(" + name + ") t from ").append(table);
-				String where = _where(q, c);
-				Object[] args = q.args();
-
-				if (!X.isEmpty(where)) {
-					sum.append(" where ").append(where);
-				}
-
-				p = c.prepareStatement(sum.toString());
-
-				int order = 1;
-				if (args != null) {
-					for (int i = 0; i < args.length; i++) {
-						Object o = args[i];
-
-						setParameter(p, order++, o, isOracle(c));
-					}
-				}
-
-				r = p.executeQuery();
-				if (r.next()) {
-					n = r.getObject("t");
-				}
-			}
-		} catch (Exception e) {
-			log.error(q, e);
-
-		} finally {
-			close(r, p, c);
-
-			if (log.isDebugEnabled())
-				log.debug("max, cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
+		if (log.isDebugEnabled()) {
+			log.debug("driver=" + D + ", url=" + url + ", user=" + username + ", password=" + passwd);
 		}
 
-		return (T) n;
-	}
-
-	@SuppressWarnings("unchecked")
-	@Override
-	public <T> T min(String table, W q, String name, String db) {
-
-		/**
-		 * create the sql statement
-		 */
-		TimeStamp t = TimeStamp.create();
-
-		// log.debug("sql:" + sql.toString());
-
-		/**
-		 * search it in database
-		 */
-		Connection c = null;
-		PreparedStatement p = null;
-		ResultSet r = null;
-		Object n = 0;
-		try {
-
-			c = getConnection(db);
-
-			if (c == null) {
-				n = 0;
-			} else {
-				StringBuilder sum = new StringBuilder();
-				sum.append("select min(" + name + ") t from ").append(table);
-				String where = _where(q, c);
-				Object[] args = q.args();
-
-				if (!X.isEmpty(where)) {
-					sum.append(" where ").append(where);
-				}
-
-				p = c.prepareStatement(sum.toString());
-
-				int order = 1;
-				if (args != null) {
-					for (int i = 0; i < args.length; i++) {
-						Object o = args[i];
-
-						setParameter(p, order++, o, isOracle(c));
+		if (!X.isEmpty(D)) {
+			Locale oldlocale = Locale.getDefault();
+			try {
+				if (!X.isEmpty(locale)) {
+					if (X.isSame(locale, "en")) {
+						Locale.setDefault(Locale.US);
+					} else if (X.isSame(locale, "zh")) {
+						Locale.setDefault(Locale.CHINA);
 					}
+					// Locale.setDefault(new Locale(locale));
 				}
 
-				r = p.executeQuery();
-				if (r.next()) {
-					n = r.getObject("t");
+				synchronized (Class.class) {
+					Class.forName(D);
 				}
+
+				DriverManager.setLoginTimeout(10);
+				Connection conn = DriverManager.getConnection(url, username, passwd);
+
+				if (log.isDebugEnabled())
+					log.debug("got connection for [" + url + ", locale=" + Locale.getDefault() + "]");
+
+				return conn;
+			} catch (Exception e) {
+				throw new SQLException(e);
+			} finally {
+				Locale.setDefault(oldlocale);
 			}
-		} catch (Exception e) {
-			log.error(q, e);
-
-		} finally {
-			close(r, p, c);
-
-			if (log.isDebugEnabled())
-				log.debug("min, cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
+		} else {
+			throw new SQLException("unknown URL");
 		}
-
-		return (T) n;
 	}
 
 	@SuppressWarnings("unchecked")
-	public <T> T avg(String table, W q, String name, String db) {
+	public <T> T avg(String table, W q, String name) {
 
 		/**
 		 * create the sql statement
@@ -2451,10 +2411,10 @@ public class RDSHelper implements Helper.DBHelper {
 		Object n = 0;
 		try {
 
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null) {
-				n = 0;
+				throw new SQLException("get connection failed!");
 			} else {
 				StringBuilder sum = new StringBuilder();
 				sum.append("select avg(" + name + ") t from ").append(table);
@@ -2472,7 +2432,7 @@ public class RDSHelper implements Helper.DBHelper {
 					for (int i = 0; i < args.length; i++) {
 						Object o = args[i];
 
-						setParameter(p, order++, o, isOracle(c));
+						setParameter(p, order++, o);
 					}
 				}
 
@@ -2482,13 +2442,20 @@ public class RDSHelper implements Helper.DBHelper {
 				}
 			}
 		} catch (Exception e) {
-			log.error(q, e);
+			if (tableNotExists(e)) {
+				// create table
+				_createTable(table, V.create().append("created", System.currentTimeMillis()).append("updated",
+						System.currentTimeMillis()), c);
+
+			} else if (!columnNotExists(e)) {
+				log.error(q, e);
+			}
 
 		} finally {
 			close(r, p, c);
 
 			if (log.isDebugEnabled())
-				log.debug("avg, cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
+				log.debug("avg, cost:" + t.past() + ", sql=" + q + ", n=" + n);
 		}
 
 		return (T) n;
@@ -2501,13 +2468,15 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public void drop(String table, String db) {
+	public void drop(String table) {
 		Connection c = null;
 		Statement stat = null;
 		try {
-			c = RDB.getConnection(db);
+
+			c = getConnection();
 			stat = c.createStatement();
-			stat.executeUpdate("drop index " + table);
+			stat.executeUpdate("drop table " + table);
+
 		} catch (Exception e) {
 			log.error(e.getMessage(), e);
 		} finally {
@@ -2516,12 +2485,12 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public List<JSON> count(String table, W q, String[] group, String db, int n) {
-		return count(table, q, "*", group, db, n);
+	public List<JSON> count(String table, W q, String[] group, int n) {
+		return count(table, q, "*", group, n);
 	}
 
 	@Override
-	public List<JSON> sum(String table, W q, String name, String[] group, String db) {
+	public List<JSON> sum(String table, W q, String name, String[] group) {
 		/**
 		 * create the sql statement
 		 */
@@ -2538,10 +2507,10 @@ public class RDSHelper implements Helper.DBHelper {
 		long n = 0;
 		try {
 
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null) {
-				n = 0;
+				throw new SQLException("get connection failed!");
 			} else {
 				StringBuilder sum = new StringBuilder();
 				sum.append("select");
@@ -2588,7 +2557,7 @@ public class RDSHelper implements Helper.DBHelper {
 					for (int i = 0; i < args.length; i++) {
 						Object o = args[i];
 
-						setParameter(p, order++, o, isOracle(c));
+						setParameter(p, order++, o);
 					}
 				}
 
@@ -2615,14 +2584,14 @@ public class RDSHelper implements Helper.DBHelper {
 			close(r, p, c);
 
 			if (log.isDebugEnabled())
-				log.debug("cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
+				log.debug("cost:" + t.past() + ", sql=" + q + ", n=" + n);
 		}
 
 		return null;
 	}
 
 	@Override
-	public List<JSON> max(String table, W q, String name, String[] group, String db) {
+	public List<JSON> avg(String table, W q, String name, String[] group) {
 		/**
 		 * create the sql statement
 		 */
@@ -2639,212 +2608,10 @@ public class RDSHelper implements Helper.DBHelper {
 		long n = 0;
 		try {
 
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null) {
-				n = 0;
-			} else {
-				StringBuilder sum = new StringBuilder();
-				sum.append("select");
-				for (int i = 0; i < group.length; i++) {
-					sum.append(group[i]);
-				}
-				sum.append(",max(" + name + ") t from ").append(table);
-				String where = _where(q, c);
-				Object[] args = q.args();
-
-				if (!X.isEmpty(where)) {
-					sum.append(" where ").append(where);
-				}
-
-				sum.append(" groug by ");
-				for (int i = 0; i < group.length; i++) {
-					sum.append(group[i]).append(",");
-				}
-
-				BasicDBObject sort = q.order();
-				if (sort != null && !sort.isEmpty()) {
-					sum.append("order by ");
-					int i = 0;
-					for (String s : sort.keySet()) {
-						if (i > 0)
-							sum.append(",");
-
-						if (X.isSame(s, "max")) {
-							sum.append("t");
-						} else {
-							sum.append(s.replaceAll("_id.", X.EMPTY));
-						}
-
-						if (sort.getInt(s) == -1) {
-							sum.append(" desc");
-						}
-					}
-				}
-
-				p = c.prepareStatement(sum.toString());
-
-				int order = 1;
-				if (args != null) {
-					for (int i = 0; i < args.length; i++) {
-						Object o = args[i];
-
-						setParameter(p, order++, o, isOracle(c));
-					}
-				}
-
-				r = p.executeQuery();
-				List<JSON> l1 = JSON.createList();
-				while (r.next()) {
-
-					JSON j1 = JSON.create();
-					for (String s : group) {
-						j1.append(s, r.getObject(s));
-					}
-
-					JSON j = JSON.create();
-					j.append("_id", j1).append("max", r.getLong("t"));
-
-					l1.add(j);
-				}
-				return l1;
-			}
-		} catch (Exception e) {
-			log.error(q, e);
-
-		} finally {
-			close(r, p, c);
-
-			if (log.isDebugEnabled())
-				log.debug("cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
-		}
-
-		return null;
-	}
-
-	@Override
-	public List<JSON> min(String table, W q, String name, String[] group, String db) {
-		/**
-		 * create the sql statement
-		 */
-		TimeStamp t = TimeStamp.create();
-
-		// log.debug("sql:" + sql.toString());
-
-		/**
-		 * search it in database
-		 */
-		Connection c = null;
-		PreparedStatement p = null;
-		ResultSet r = null;
-		long n = 0;
-		try {
-
-			c = getConnection(db);
-
-			if (c == null) {
-				n = 0;
-			} else {
-				StringBuilder sum = new StringBuilder();
-				sum.append("select");
-				for (int i = 0; i < group.length; i++) {
-					sum.append(group[i]);
-				}
-				sum.append(",min(").append(name).append(") t from ").append(table);
-				String where = _where(q, c);
-				Object[] args = q.args();
-
-				if (!X.isEmpty(where)) {
-					sum.append(" where ").append(where);
-				}
-
-				sum.append(" groug by ");
-				for (int i = 0; i < group.length; i++) {
-					sum.append(group[i]).append(",");
-				}
-
-				BasicDBObject sort = q.order();
-				if (sort != null && !sort.isEmpty()) {
-					sum.append("order by ");
-					int i = 0;
-					for (String s : sort.keySet()) {
-						if (i > 0)
-							sum.append(",");
-
-						if (X.isSame(s, "min")) {
-							sum.append("t");
-						} else {
-							sum.append(s.replaceAll("_id.", X.EMPTY));
-						}
-
-						if (sort.getInt(s) == -1) {
-							sum.append(" desc");
-						}
-					}
-				}
-
-				p = c.prepareStatement(sum.toString());
-
-				int order = 1;
-				if (args != null) {
-					for (int i = 0; i < args.length; i++) {
-						Object o = args[i];
-
-						setParameter(p, order++, o, isOracle(c));
-					}
-				}
-
-				r = p.executeQuery();
-				List<JSON> l1 = JSON.createList();
-				while (r.next()) {
-
-					JSON j1 = JSON.create();
-					for (String s : group) {
-						j1.append(s, r.getObject(s));
-					}
-
-					JSON j = JSON.create();
-					j.append("_id", j1).append("min", r.getLong("t"));
-
-					l1.add(j);
-				}
-				return l1;
-			}
-		} catch (Exception e) {
-			log.error(q, e);
-
-		} finally {
-			close(r, p, c);
-
-			if (log.isDebugEnabled())
-				log.debug("cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
-		}
-
-		return null;
-	}
-
-	@Override
-	public List<JSON> avg(String table, W q, String name, String[] group, String db) {
-		/**
-		 * create the sql statement
-		 */
-		TimeStamp t = TimeStamp.create();
-
-		// log.debug("sql:" + sql.toString());
-
-		/**
-		 * search it in database
-		 */
-		Connection c = null;
-		PreparedStatement p = null;
-		ResultSet r = null;
-		long n = 0;
-		try {
-
-			c = getConnection(db);
-
-			if (c == null) {
-				n = 0;
+				throw new SQLException("get connection failed!");
 			} else {
 				StringBuilder sum = new StringBuilder();
 				sum.append("select");
@@ -2891,7 +2658,7 @@ public class RDSHelper implements Helper.DBHelper {
 					for (int i = 0; i < args.length; i++) {
 						Object o = args[i];
 
-						setParameter(p, order++, o, isOracle(c));
+						setParameter(p, order++, o);
 					}
 				}
 
@@ -2918,14 +2685,14 @@ public class RDSHelper implements Helper.DBHelper {
 			close(r, p, c);
 
 			if (log.isDebugEnabled())
-				log.debug("cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
+				log.debug("cost:" + t.past() + ", sql=" + q + ", n=" + n);
 		}
 
 		return null;
 	}
 
 	@Override
-	public List<JSON> aggregate(String table, String[] func, W q, String[] group, String db) {
+	public List<JSON> aggregate(String table, String[] func, W q, String[] group) {
 		/**
 		 * create the sql statement
 		 */
@@ -2942,10 +2709,10 @@ public class RDSHelper implements Helper.DBHelper {
 		long n = 0;
 		try {
 
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null) {
-				n = 0;
+				throw new SQLException("get connection failed!");
 			} else {
 				StringBuilder sum = new StringBuilder();
 				sum.append("select");
@@ -2992,7 +2759,7 @@ public class RDSHelper implements Helper.DBHelper {
 					for (int i = 0; i < args.length; i++) {
 						Object o = args[i];
 
-						setParameter(p, order++, o, isOracle(c));
+						setParameter(p, order++, o);
 					}
 				}
 
@@ -3014,26 +2781,23 @@ public class RDSHelper implements Helper.DBHelper {
 			}
 		} catch (Exception e) {
 			log.error(q, e);
-
 		} finally {
 			close(r, p, c);
 
 			if (log.isDebugEnabled())
-				log.debug("cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
+				log.debug("cost:" + t.past() + ", sql=" + q + ", n=" + n);
 		}
 
 		return null;
 	}
 
 	@Override
-	public <T> T std_deviation(String table, W q, String name, String db) {
-		// TODO not support
+	public <T> T std_deviation(String table, W q, String name) {
 		return null;
 	}
 
 	@Override
-	public <T> T median(String table, W q, String name, String db) {
-		// TODO not support
+	public <T> T median(String table, W q, String name) {
 		return null;
 	}
 
@@ -3048,13 +2812,12 @@ public class RDSHelper implements Helper.DBHelper {
 	}
 
 	@Override
-	public long size(String table, String db) {
-		// TODO Auto-generated method stub
+	public long size(String table) {
 		return 0;
 	}
 
 	@Override
-	public long count(String table, W q, String name, String db) {
+	public long count(String table, W q, String name) {
 
 		/**
 		 * create the sql statement
@@ -3069,15 +2832,17 @@ public class RDSHelper implements Helper.DBHelper {
 		Connection c = null;
 		PreparedStatement p = null;
 		ResultSet r = null;
+
+		StringBuilder sum = new StringBuilder();
+
 		long n = 0;
 		try {
 
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null) {
-				n = 0;
+				throw new SQLException("get connection failed!");
 			} else {
-				StringBuilder sum = new StringBuilder();
 				sum.append("select count(" + name + ") t from ").append(table);
 				String where = _where(q, c);
 				Object[] args = q.args();
@@ -3093,7 +2858,7 @@ public class RDSHelper implements Helper.DBHelper {
 					for (int i = 0; i < args.length; i++) {
 						Object o = args[i];
 
-						setParameter(p, order++, o, isOracle(c));
+						setParameter(p, order++, o);
 					}
 				}
 
@@ -3104,20 +2869,27 @@ public class RDSHelper implements Helper.DBHelper {
 			}
 		} catch (Exception e) {
 
-			log.error(q, e);
+			if (tableNotExists(e)) {
+				// create table
+				_createTable(table, V.create().append("created", System.currentTimeMillis()).append("updated",
+						System.currentTimeMillis()), c);
+
+			} else if (!columnNotExists(e)) {
+				log.error(sum.toString(), e);
+			}
 
 		} finally {
 			close(r, p, c);
 
 			if (log.isDebugEnabled())
-				log.debug("cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
+				log.debug("cost:" + t.past() + ", sql=" + q + ", n=" + n);
 		}
 
 		return n;
 	}
 
 	@Override
-	public List<JSON> count(String table, W q, String name, String[] group, String db, int n1) {
+	public List<JSON> count(String table, W q, String name, String[] group, int n1) {
 
 		/**
 		 * create the sql statement
@@ -3135,10 +2907,10 @@ public class RDSHelper implements Helper.DBHelper {
 		long n = 0;
 		try {
 
-			c = getConnection(db);
+			c = getConnection();
 
 			if (c == null) {
-				n = 0;
+				throw new SQLException("get connection failed!");
 			} else {
 				StringBuilder sum = new StringBuilder();
 				sum.append("select");
@@ -3185,7 +2957,7 @@ public class RDSHelper implements Helper.DBHelper {
 					for (int i = 0; i < args.length; i++) {
 						Object o = args[i];
 
-						setParameter(p, order++, o, isOracle(c));
+						setParameter(p, order++, o);
 					}
 				}
 
@@ -3210,13 +2982,20 @@ public class RDSHelper implements Helper.DBHelper {
 				return l1;
 			}
 		} catch (Exception e) {
-			log.error(q, e);
+			if (tableNotExists(e)) {
+				// create table
+				_createTable(table, V.create().append("created", System.currentTimeMillis()).append("updated",
+						System.currentTimeMillis()), c);
+
+			} else if (!columnNotExists(e)) {
+				log.error(q, e);
+			}
 
 		} finally {
 			close(r, p, c);
 
 			if (log.isDebugEnabled())
-				log.debug("cost:" + t.pastms() + "ms, sql=" + q + ", n=" + n);
+				log.debug("cost:" + t.past() + ", sql=" + q + ", n=" + n);
 		}
 
 		return null;
@@ -3224,8 +3003,272 @@ public class RDSHelper implements Helper.DBHelper {
 
 	@Override
 	public void repair(String table) {
+
+	}
+
+	@Override
+	public JSON stats(String table) {
+		return null;
+	}
+
+	@Override
+	public JSON status() {
+		return null;
+	}
+
+	@SuppressWarnings("unchecked")
+	@Override
+	public <T> T max(String table, W q, String name) {
+
+		Data e = this.load(table, q.sort(name, -1), Data.class, false);
+		if (e != null) {
+			return (T) e.get(name);
+		}
+		return null;
+
+	}
+
+	@SuppressWarnings("unchecked")
+	@Override
+	public <T> T min(String table, W q, String name) {
+
+		Data e = this.load(table, q.sort(name), Data.class, false);
+		if (e != null) {
+			return (T) e.get(name);
+		}
+		return null;
+
+	}
+
+	private transient Optimizer _optimizer;
+
+	@Override
+	public Optimizer getOptimizer() {
+		if (_optimizer == null) {
+			_optimizer = new Optimizer(this);
+		}
+		return _optimizer;
+	}
+
+	@Override
+	public <T extends Bean> T load(String table, W q, Class<T> clazz) {
+		return load(table, q, clazz, false);
+	}
+
+	@SuppressWarnings("unchecked")
+	@Override
+	public <T extends Bean> T load(String table, W q, Class<T> clazz, boolean trace) {
+		try {
+			Bean b = clazz.getDeclaredConstructor().newInstance();
+			if (load(table, q, b, trace)) {
+				return (T) b;
+			}
+		} catch (Exception e) {
+			log.error(e.getMessage(), e);
+		}
+		return null;
+	}
+
+	@Override
+	public boolean distributed(String table, String key) {
+
+		/**
+		 * search it in database
+		 */
+		Connection c = null;
+		Statement p = null;
+		ResultSet r = null;
+		StringBuilder sql = new StringBuilder();
+
+		try {
+			c = getConnection();
+
+			if (c == null) {
+				throw new SQLException("get connection failed!");
+			}
+
+			if (this.isPG(c)) {
+				sql.append("select create_distributed_table('").append(table).append("', '").append(key).append("')");
+				p = c.createStatement();
+				r = p.executeQuery(sql.toString());
+
+				return true;
+			}
+
+		} catch (Exception e) {
+
+			if (!tableNotExists(e) && !columnNotExists(e)) {
+				log.error(sql, e);
+			}
+
+		} finally {
+			close(r, p, c);
+		}
+
+		return false;
+	}
+
+	@Override
+	public boolean createTable(String table, JSON cols) {
 		// TODO Auto-generated method stub
-		
+		return false;
+	}
+
+	@Override
+	public long getTime() {
+		return 0;
+	}
+
+	/** The conf. */
+	private static Configuration conf;
+
+	/**
+	 * initialize the DB object from the "giiwa.properties"
+	 */
+	public static synchronized void init() {
+
+		conf = Config.getConf();
+		if (conf == null) {
+			return;
+		}
+
+		getDataSource("default");
+
+	}
+
+	public static BasicDataSource getDataSource(String name) {
+
+		BasicDataSource external = dss.get(name);
+		if (external == null && conf != null) {
+			String url = conf.getString("db[" + name + "].url", null);
+			String username = conf.getString("db[" + name + "].user", null);
+			String passwd = conf.getString("db[" + name + "].passwd", null);
+
+			if (!X.isEmpty(url)) {
+
+				String D = _getDiver(url);
+
+				int N = conf.getInt("db[" + name + "].conns", MAX_ACTIVE_NUMBER);
+
+				external = _get(D, username, passwd, url, N);
+				log.info(name + ".driver=" + D);
+
+				dss.put(name, external);
+			}
+		}
+
+		return external;
+	}
+
+	/** The dss. */
+	private static Map<String, BasicDataSource> dss = new TreeMap<String, BasicDataSource>();
+
+	private static BasicDataSource _get(String D, String username, String passwd, String url, int N) {
+		BasicDataSource external = new BasicDataSource();
+		external.setDriverClassName(D.trim());
+
+		if (!X.isEmpty(username)) {
+			external.setUsername(username.trim());
+		}
+		if (!X.isEmpty(passwd)) {
+			external.setPassword(passwd.trim());
+		}
+
+		external.setUrl(url.trim());
+
+//		external.setMaxActive(N);
+		external.setMaxTotal(N);
+		external.setDefaultAutoCommit(true);
+		external.setMaxIdle(N);
+//		external.setMaxWait(MAX_WAIT_TIME);
+		external.setMaxWaitMillis(MAX_WAIT_TIME);
+		external.setDefaultAutoCommit(true);
+		external.setDefaultReadOnly(false);
+		external.setDefaultTransactionIsolation(Connection.TRANSACTION_READ_COMMITTED);
+		external.setValidationQuery(null);// VALIDATION_SQL);
+		external.setPoolPreparedStatements(true);
+
+		return external;
+	}
+
+	private static String _getDiver(String url) {
+//		if (url.startsWith("jdbc:hsqldb:")) {
+//			return "org.hsqldb.jdbcDriver";
+//		} else if (url.startsWith("jdbc:h2:")) {
+//			return "org.h2.Driver";
+//		} else if (url.startsWith("jdbc:derby:")) {
+//			return "org.apache.derby.jdbc.EmbeddedDriver";
+//		} else if (url.startsWith("jdbc:firebirdsql:")) {
+//			return "org.firebirdsql.jdbc.FBDriver";
+		if (url.startsWith("jdbc:sqlite:")) {
+			return "org.sqlite.JDBC";
+		} else if (url.startsWith("jdbc:mongodb:")) {
+			return "com.dbschema.MongoJdbcDriver";
+
+		} else if (url.startsWith("jdbc:clickhouse:")) {
+			// jdbc:clickhouse://localhost:8123/test
+			return "cc.blynk.clickhouse.ClickHouseDriver";
+
+		} else if (url.startsWith("jdbc:hive2:")) {
+			// Hive
+			return "org.apache.hive.jdbc.HiveDriver";
+
+		} else if (url.startsWith("jdbc:postgresql:")) {
+			// PostgreSQL
+			return "org.postgresql.Driver";
+		} else if (url.startsWith("jdbc:pivotal:greenplum:")) {
+			// Greenplum
+			return "com.pivotal.jdbc.GreenplumDriver";
+
+		} else if (url.startsWith("jdbc:dm:")) {
+			// DB
+			return "dm.jdbc.driver.DmDriver";
+
+		} else if (url.startsWith("jdbc:TAOS:")) {
+			// TDengine
+			return "com.taosdata.jdbc.TSDBDriver";
+
+		} else if (url.startsWith("jdbc:mysql:")) {
+			// MySQL
+			return "com.mysql.cj.jdbc.Driver";
+		} else if (url.startsWith("jdbc:mariadb:")) {
+			// MariaDB
+			return "org.mariadb.jdbc.Driver";
+		} else if (url.startsWith("jdbc:oracle:")) {
+			// Oracle
+			return "oracle.jdbc.OracleDriver";
+		} else if (url.startsWith("jdbc:db2:")) {
+			// DB2
+			return "com.ibm.db2.jcc.DB2Driver";
+
+		} else if (url.startsWith("jdbc:informix-sqli:")) {
+
+			return "com.informix.jdbc.IfxDriver";
+		} else if (url.startsWith("jdbc:microsoft:sqlserver:")) {
+			// SQLServer
+			return "com.microsoft.jdbc.sqlserver.SQLServerDriver";
+		} else if (url.startsWith("jdbc:sqlserver:")) {
+
+			return "com.microsoft.sqlserver.jdbc.SQLServerDriver";
+		} else if (url.startsWith("jdbc:sybase:")) {
+			// Sybase
+			return "net.sourceforge.jtds.jdbc.Driver";
+//		} else if (url.startsWith("jdbc:odbc:")) {
+//			return "sun.jdbc.odbc.JdbcOdbcDriver";
+		}
+		return null;
+	}
+
+	/** The max active number. */
+	private static int MAX_ACTIVE_NUMBER = 10;
+
+	/** The max wait time. */
+	private static int MAX_WAIT_TIME = 10 * 1000;
+
+	@Override
+	public void killOp(Object id) {
+		// TODO Auto-generated method stub
+
 	}
 
 }
